--- a/_posts/2020-01-25-mysql.md
+++ b/_posts/2020-01-25-mysql.md
@@ -551,11 +551,8 @@ group by column_name;
 ## 十七、NULL值处理
 
 ### 1.__IS NULL__: 当列的值是 NULL,此运算符返回 true;
-
 ### 2.__IS NOT NULL__: 当列的值不为 NULL, 运算符返回 true;
-
 ### 3.__<=>__: 比较操作符（不同于 = 运算符），当比较的的两个值相等或者都为 NULL 时返回 true。
-
 ### 4.注意
 ```sql
 select * , columnName1+ifnull(columnName2,0) from tableName;
@@ -601,18 +598,18 @@ select * , columnName1+ifnull(columnName2,0) from tableName;
 
 ### 1.正则表达式：
 
-|    模式     |      描述
-|     -      |       -
-| ^          | 匹配输入字符串的开始位置。如果设置了 RegExp 对象的 Multiline 属性，^ 也匹配 '\n' 或 '\r' 之后的位置。
-| $          | 匹配输入字符串的结束位置。如果设置了RegExp 对象的 Multiline 属性，$ 也匹配 '\n' 或 '\r' 之前的位置。
-| .          | 匹配除 "\n" 之外的任何单个字符。要匹配包括 '\n' 在内的任何字符，请使用象 '[.\n]' 的模式。
-| [...]      | 	字符集合。匹配所包含的任意一个字符。例如， '[abc]' 可以匹配 "plain" 中的 'a'。
-| [^...]     | 	负值字符集合。匹配未包含的任意字符。例如， '[^abc]' 可以匹配 "plain" 中的'p'。
-| p1\|p2\|p3 | 	匹配 p1 或 p2 或 p3。例如，'z\|food' 能匹配 "z" 或 "food"。'(z\|f)ood' 则匹配 "zood" 或 "food"。
-| *          | 	匹配前面的子表达式零次或多次。例如，zo* 能匹配 "z" 以及 "zoo"。* 等价于{0,}。
-| +          | 	匹配前面的子表达式一次或多次。例如，'zo+' 能匹配 "zo" 以及 "zoo"，但不能匹配 "z"。+ 等价于 {1,}。
-| {n}        | 	n 是一个非负整数。匹配确定的 n 次。例如，'o{2}' 不能匹配 "Bob" 中的 'o'，但是能匹配 "food" 中的两个 o。
-| {n, m}     | 	m 和 n 均为非负整数，其中n <= m。最少匹配 n 次且最多匹配 m 次。
+| 模式 | 描述 |
+| - | - |
+| ^ | 匹配输入字符串的开始位置。如果设置了 RegExp 对象的 Multiline 属性，^ 也匹配 '\n' 或 '\r' 之后的位置。 |
+| $ | 匹配输入字符串的结束位置。如果设置了RegExp 对象的 Multiline 属性，$ 也匹配 '\n' 或 '\r' 之前的位置。 |
+| . | 匹配除 "\n" 之外的任何单个字符。要匹配包括 '\n' 在内的任何字符，请使用象 '[.\n]' 的模式。 |
+| [...] | 字符集合。匹配所包含的任意一个字符。例如， '[abc]' 可以匹配 "plain" 中的 'a'。 |
+| [^...] | 负值字符集合。匹配未包含的任意字符。例如， '[^abc]' 可以匹配 "plain" 中的'p'。 |
+| p1\|p2\|p3 | 匹配 p1 或 p2 或 p3。例如，'z\|food' 能匹配 "z" 或 "food"。'(z\|f)ood' 则匹配 "zood" 或 "food"。 |
+| * | 匹配前面的子表达式零次或多次。例如，zo* 能匹配 "z" 以及 "zoo"。* 等价于{0,}。 |
+| + | 匹配前面的子表达式一次或多次。例如，'zo+' 能匹配 "zo" 以及 "zoo"，但不能匹配 "z"。+ 等价于 {1,}。 |
+| {n} | n 是一个非负整数。匹配确定的 n 次。例如，'o{2}' 不能匹配 "Bob" 中的 'o'，但是能匹配 "food" 中的两个 o。 |
+| {n, m} | m 和 n 均为非负整数，其中n <= m。最少匹配 n 次且最多匹配 m 次。
 
 ### 2.example
 ```sql
