update blog  Mysql.md

--- a/_posts/2020-01-25-mysql.md
+++ b/_posts/2020-01-25-mysql.md
@@ -550,9 +550,9 @@ group by column_name;
 
 ## 十七、NULL值处理
 
-### 1.__IS NULL__: 当列的值是 NULL,此运算符返回 true;
-### 2.__IS NOT NULL__: 当列的值不为 NULL, 运算符返回 true;
-### 3.__<=>__: 比较操作符（不同于 = 运算符），当比较的的两个值相等或者都为 NULL 时返回 true。
+### 1.IS NULL:当列的值是 NULL,此运算符返回 true;
+### 2.IS NOT NULL:当列的值不为 NULL, 运算符返回 true;
+### 3.<=>:比较操作符（不同于 = 运算符），当比较的的两个值相等或者都为 NULL 时返回 true。
 ### 4.注意
 ```sql
 select * , columnName1+ifnull(columnName2,0) from tableName;
