update blog  Mysql.md

--- a/_posts/2020-01-25-mysql.md
+++ b/_posts/2020-01-25-mysql.md
@@ -32,38 +32,38 @@ use <数据库名>;
 ## 四、数据类型
 
 ### 1.数值类型
-|     类型 		 | 大小  |   用途 	|
-| 		-	 	|   -  | -		  |
-| tinyint 		| 1字节 | 小整数值
-| smallint 		| 2字节 | 大整数值
-| mediumint 	| 3字节 | 大整数值
-| int(integer) 	| 4字节 | 大整数值
-| bigint 		| 8字节 | 极大整数值
-| float 		| 4字节 | 单精度浮点数值
-| double 		| 8字节 | 双精度浮点数值
+| 类型 | 大小 | 用途 |
+| -	| - | - |
+| tinyint | 1字节 | 小整数值 |
+| smallint | 2字节 | 大整数值 |
+| mediumint | 3字节 | 大整数值 |
+| int(integer) | 4字节 | 大整数值 |
+| bigint | 8字节 | 极大整数值 |
+| float | 4字节 | 单精度浮点数值 |
+| double | 8字节 | 双精度浮点数值 |
 
 ### 2.日期和时间类型
-|    类型    | 大小 |		 格式		  |  用途   
-| 	  - 	|  -  | 		-			|   -   
-| date		|  3  | YYYY-MM-DD			|日期值
-| time		|  3  | HH:MM:SS			|时间值或持续时间
-| year		|  1  | YYYY				|年份值
-| datetime  |  8  | YYYY-MM-DD HH:MM:SS |混合日期时间值
-| timestamp |  4  | YYYYMM DDHHMMSS		|混合日期和时间值，时间戳
+| 类型 | 大小 |	格式 | 用途 |
+| - | - | -	| - |
+| date | 3 | YYYY-MM-DD |日期值 |
+| time | 3 | HH:MM:SS |时间值或持续时间 |
+| year | 1 | YYYY |年份值 |
+| datetime | 8 | YYYY-MM-DD HH:MM:SS |混合日期时间值 |
+| timestamp | 4 | YYYYMM DDHHMMSS |混合日期和时间值，时间戳 |
 
 ### 3.字符串类型
-|     类型    |   用途 
-|     -      |     -
-| char       | 定长字符串
-| varchar    | 变长字符串
-| tinyblob   | 不超过 255 个字符的二进制字符串
-| tinytext 	 | 短文本字符串
-| blow 		 | 二进制形式的长文本数据
-| text		 | 长文本数据
-| mediumblob | 二进制形式的中等长度文本数据
-| mediumtext | 中等长度文本数据
-| longblob   | 二进制形式的极大文本数据
-| longtxte   | 极大文本数据
+| 类型 | 用途 |
+| - | - |
+| char | 定长字符串 |
+| varchar | 变长字符串 |
+| tinyblob | 不超过 255 个字符的二进制字符串 |
+| tinytext | 短文本字符串 |
+| blow | 二进制形式的长文本数据 |
+| text | 长文本数据 |
+| mediumblob | 二进制形式的中等长度文本数据 |
+| mediumtext | 中等长度文本数据 |
+| longblob | 二进制形式的极大文本数据 |
+| longtxte | 极大文本数据 |
 
 ## 五、创建数据表
 
