--- a/_posts/2020-01-25-mysql.md
+++ b/_posts/2020-01-25-mysql.md
@@ -898,24 +898,23 @@ alter table testalter_tbl rename to alter_tbl;
 	mysqldump -u root -p --all-databases > database_dump.txt
 	```
 
-- 1.3 导入数据  
-	- 1.3.1 mysql 命令导入
-		```bash
-		mysql -u用户名 -p密码 < 要导入的数据库数据(runoob.sql)
-				
-		# 实例
-		mysql -uroot -p123456 < runoob.sql
-		```
+### 2.导入数据  
+- 2.1 mysql 命令导入
+	```bash
+	mysql -u用户名 -p密码 < 要导入的数据库数据(runoob.sql)
+			
+	# 实例
+	mysql -uroot -p123456 < runoob.sql
+	```
 
-	- 1.3.2 source 命令导入
-		```sql
-			create database abc;      -- 创建数据库
-			use abc;                  -- 使用已创建的数据库
-			set names utf8;           -- 设置编码
-			source /home/abc/abc.sql  -- 导入备份数据库
-		```
-	
-	- 1.3.3 使用 load data 导入数据
-		```sql
-			load data local infile 'dump.txt' into table mytbl;
-		```
+- 2.2 source 命令导入
+	```sql
+	create database abc;      -- 创建数据库
+	use abc;                  -- 使用已创建的数据库
+	set names utf8;           -- 设置编码
+	source /home/abc/abc.sql  -- 导入备份数据库
+	```
+- 2.3 使用 load data 导入数据
+	```sql
+	load data local infile 'dump.txt' into table mytbl;
+	```
