--- a/_posts/2020-01-30-numpy.md
+++ b/_posts/2020-01-30-numpy.md
@@ -8,7 +8,7 @@ keywords: Numpy, Notes
 
 学习python关于numpy的一些用法
 
-## 1、__NumPy Ndarray 对象__
+## 1、NumPy Ndarray 对象
 
 - ndarray 对象是用于存放同类型元素的多维数组;
 - ndarray 中的每个元素在内存中都有相同存储大小的区域;
