--- a/_posts/2020-01-30-numpy.md
+++ b/_posts/2020-01-30-numpy.md
@@ -62,7 +62,7 @@ numpy.array(object, dtype = None, copy = True, order = None, subok = False, ndmi
     ```python
     # 最小维度
     import numpy as np 
-    a = np.array([1, 2, 3, 4, 5], ndmin =  2)  
+    a = np.array([1, 2, 3, 4, 5], ndmin = 2)  
     print (a)
     ```
     输出结果:
@@ -81,10 +81,10 @@ numpy.array(object, dtype = None, copy = True, order = None, subok = False, ndmi
     ```
     [1.+0.j 2.+0.j 3.+0.j]
     ```
+---
+## 2、NumPy 数据类型
 
-## 2、Numpy 数据类型
-
-### 2.1、Numpy 数据类型
+### 2.1、NumPy 数据类型
 
 | 名称 | 描述 |
 | - | - |
@@ -172,7 +172,7 @@ numpy.dtype(object, align, copy)
     # 展示结构化数据类型的使用，类型字段和对应的实际类型将被创建
     # 首先创建结构化数据类型
     import numpy as np
-    dt = np.dtype([('age',np.int8)]) 
+    dt = np.dtype([('age', np.int8)]) 
     print(dt)
     ```
     输出结果:
@@ -184,8 +184,8 @@ numpy.dtype(object, align, copy)
     ```python
     # 将数据类型应用于 ndarray 对象
     import numpy as np
-    dt = np.dtype([('age',np.int8)]) 
-    a = np.array([(10,),(20,),(30,)], dtype = dt) 
+    dt = np.dtype([('age', np.int8)]) 
+    a = np.array([(10, ), (20, ), (30, )], dtype = dt) 
     print(a)
     ```
     输出结果:
@@ -198,7 +198,7 @@ numpy.dtype(object, align, copy)
     # 类型字段名可以用于存取实际的 age 列
     import numpy as np
     dt = np.dtype([('age',np.int8)]) 
-    a = np.array([(10,),(20,),(30,)], dtype = dt) 
+    a = np.array([(10, ), (20, ), (30, )], dtype = dt) 
     print(a['age'])
     ```
     输出结果:
@@ -210,7 +210,7 @@ numpy.dtype(object, align, copy)
     ```python
     # 定义一个结构化数据类型 student，包含字符串字段 name，整数字段 age，及浮点字段 marks，并将这个 dtype 应用到 ndarray 对象
     import numpy as np
-    student = np.dtype([('name','S20'), ('age', 'i1'), ('marks', 'f4')]) 
+    student = np.dtype([('name', 'S20'), ('age', 'i1'), ('marks', 'f4')]) 
     print(student)
     ```
     输出结果:
@@ -246,5 +246,94 @@ numpy.dtype(object, align, copy)
     | S, a | (byte-)字符串 |
     | U | Unicode |
     | V | 原始数据 (void) |
+---
+## 3、NumPy 数组属性
 
-## Updating...
+NumPy 数组的维数称为秩（rank），秩就是轴的数量，即数组的维度，一维数组的秩为 1，二维数组的秩为 2，以此类推。
+
+在 NumPy中，每一个线性的数组称为是一个轴（axis），也就是维度（dimensions）。比如说，二维数组相当于是两个一维数组，其中第一个一维数组中每个元素又是一个一维数组。所以一维数组就是 NumPy 中的轴（axis），第一个轴相当于是底层数组，第二个轴是底层数组里的数组。而轴的数量——秩，就是数组的维数。
+
+很多时候可以声明 axis。axis=0，表示沿着第 0 轴进行操作，即对每一列进行操作；axis=1，表示沿着第1轴进行操作，即对每一行进行操作。
+
+NumPy 的数组中比较重要 ndarray 对象属性有：
+
+| 属性 | 说明 |
+| - | - |
+| ndarray.ndim | 秩，即轴的数量或维度的数量 |
+| ndarray.shape | 数组的维度，对于矩阵，n 行 m 列 |
+| ndarray.size | 数组元素的总个数，相当于 .shape 中 n*m 的值 |
+| ndarray.dtype | ndarray 对象的元素类型 |
+| ndarray.itemsize | ndarray 对象中每个元素的大小，以字节为单位 |
+| ndarray.flags | ndarray 对象的内存信息 |
+| ndarray.real | ndarray元素的实部 |
+| ndarray.imag | ndarray 元素的虚部 |
+| ndarray.data | 包含实际数组元素的缓冲区，由于一般通过数组的索引获取元素，所以通常不需要使用这个属性 |
+
+### 3.1、ndarray.ndim
+
+ndarray.ndim 用于返回数组的维数，等于秩
+```python
+import numpy as np 
+ 
+a = np.arange(24)  
+print (a.ndim)             # a 现只有一个维度
+# 现在调整其大小
+b = a.reshape(2, 4, 3)  # b 现在拥有三个维度
+print (b.ndim)
+```
+输出结果：
+```
+1
+3
+```
+
+### 3.2、ndarray.shape
+
+ndarray.shape 表示数组的维度，返回一个元组，这个元组的长度就是维度的数目，即 ndim 属性(秩)。比如，一个二维数组，其维度表示"行数"和"列数"
+
+#### 3.2.1、ndarray.shape 可以用于调整数组大小
+
+```python
+import numpy as np  
+ 
+a = np.array([[1, 2, 3],[4, 5, 6]])  
+print (a.shape)
+```
+输出结果：
+```
+(2, 3)
+```
+
+__调整数组大小__
+```python
+import numpy as np 
+ 
+a = np.array([[1, 2, 3],[4, 5, 6]]) 
+a.shape =  (3, 2)  
+print (a)
+```
+输出结果：
+```
+[[1 2]
+ [3 4]
+ [5 6]]
+```
+
+#### 3.2.2、NumPy 也提供了 reshape 函数来调整数组大小
+
+```python
+import numpy as np 
+ 
+a = np.array([[1,2,3],[4,5,6]]) 
+b = a.reshape(3,2)  
+print (b)
+```
+输出结果：
+```
+[[1, 2] 
+ [3, 4] 
+ [5, 6]]
+```
+
+### 3.3、ndarray.itemsize
+updating...
