update blog numpy.md 2020.01.31

--- a/_posts/2020-01-30-numpy.md
+++ b/_posts/2020-01-30-numpy.md
@@ -336,4 +336,297 @@ print (b)
 ```
 
 ### 3.3、ndarray.itemsize
-updating...
+
+ndarray.itemsize 以字节的形式返回数组中每一个元素的大小
+
+例如，一个元素类型为 float64 的数组 itemsiz 属性值为 8(float64 占用 64 个 bits，每个字节长度为 8，所以 64/8，占用 8 个字节），又如，一个元素类型为 complex32 的数组 item 属性为 4（32/8）。
+
+- 实例
+    ```python
+    import numpy as np 
+    
+    # 数组的 dtype 为 int8（一个字节）  
+    x = np.array([1,2,3,4,5], dtype = np.int8)  
+    print (x.itemsize)
+    
+    # 数组的 dtype 现在为 float64（八个字节） 
+    y = np.array([1,2,3,4,5], dtype = np.float64)  
+    print (y.itemsize)
+    ```
+    输出结果:
+    ```
+    1
+    8
+    ```
+
+### 3.4、ndarray.flags
+
+ndarray.flags 返回 ndarray 对象的内存信息，包含以下属性：
+
+| 属性 | 描述 |
+| - | - |
+| C_CONTIGUOUS (C) | 数据是在一个单一的C风格的连续段中 |
+| F_CONTIGUOUS (F) | 数据是在一个单一的Fortran风格的连续段中 |
+| OWNDATA (O) | 数组拥有它所使用的内存或从另一个对象中借用它 |
+| WRITEABLE (W) | 数据区域可以被写入，将该值设置为 False，则数据为只读 |
+| ALIGNED (A) | 数据和所有元素都适当地对齐到硬件上 |
+| UPDATEIFCOPY (U) | 这个数组是其它数组的一个副本，当这个数组被释放时，原数组的内容将被更新 |
+
+- 实例
+    ```python
+    import numpy as np 
+    
+    x = np.array([1,2,3,4,5])  
+    print (x.flags)
+    ```
+    输出结果:
+    ```
+    C_CONTIGUOUS : True
+    F_CONTIGUOUS : True
+    OWNDATA : True
+    WRITEABLE : True
+    ALIGNED : True
+    WRITEBACKIFCOPY : False
+    UPDATEIFCOPY : False
+    ```
+
+## 4、NumPy 创建数组
+
+ndarray 数组除了可以使用底层 ndarray 构造器来创建外，也可以通过以下几种方式来创建。
+
+### 4.1、numpy.empty
+
+numpy.empty 方法用来创建一个指定形状（shape）、数据类型（dtype）且未初始化的数组：
+```python
+numpy.empty(shape, dtype = float, order = 'C')
+```
+
+参数说明:
+
+| 参数 | 描述 |
+| - | - |
+| shape | 数组形状 |
+| dtype	| 数据类型，可选 |
+| order	| 有"C"和"F"两个选项,分别代表，行优先和列优先，在计算机内存中的存储元素的顺序 |
+
+- 实例
+    ```python
+    import numpy as np 
+    x = np.empty([3,2], dtype = int) 
+    print (x)
+    ```
+    输出结果:
+    ```
+    [[     139703365620320      93945776659568]
+    [-3757103615064787034      139703365620800]
+    [      93945776660512 -3954055504769327176]]
+    ```
+    - __注意: 数组元素为随机值，因为它们未初始化__
+
+### 4.2、numpy.zeros
+
+创建指定大小的数组，数组元素以0来填充：
+```python
+numpy.zeros(shape, dtype = float, order = 'C')
+```
+
+参数说明:
+| 参数 | 描述 |
+| - | - |
+| shape | 数组形状 |
+| dtype | 数据类型，可选 |
+| order | 'C'用于 C 的行数组，或者'F'用于 fortran 的列数组 |
+
+- 实例
+    ```python
+    import numpy as np
+
+    # 默认为浮点数
+    x = np.zeros(5)
+    print(x)
+
+    # 设置类型为整数
+    y = np.zeros((5, ), dtype = np.int)
+    print(y)
+
+    # 自定义类型
+    z = np.zeros((2, 2), dtype = [('x', 'i4'), ('y', 'i4')])
+    print(z)
+    ```
+    输出结果:
+    ```
+    [0. 0. 0. 0. 0.]
+
+    [0 0 0 0 0]
+
+    [[(0, 0) (0, 0)]
+    [(0, 0) (0, 0)]]
+    ```
+
+### 4.3、numpy.ones
+
+创建指定形状的数组，数组元素以1来填充:
+```python
+numpy.ones(shape, dtype = None, order = 'C')
+```
+
+参数说明：
+
+| 参数 | 描述 |
+| - | - |
+| shape | 数组形状 |
+| dtype | 数据类型，可选 |
+| order | 'C'用于 C 的行数组，或者'F'用于 fortran 的列数组 |
+
+- 实例
+    ```python
+    import numpy as np
+
+    # 默认为浮点数
+    x = np.ones(5)
+    print(x)
+
+    # 自定义类型
+    x = np.ones([2, 3], dtype=int)
+    print(x)
+    ```
+    输出结果：
+    ```
+    [1. 1. 1. 1. 1.]
+
+    [[1 1 1]
+     [1 1 1]]
+    ```
+
+## 5、NumPy 从已有的数组创建数组
+
+### 5.1、numpy.asarray
+
+numpy.asarray 类似 numpy.array，但 numpy.asarray 参数只有三个，比 numpy.array 少两个。
+```python
+numpy.asarray(a, dtype = None, order = None)
+```
+
+参数说明：
+| 参数 | 描述 |
+| - | - |
+| a | 任意形式的输入参数，可以是：列表、列表的元祖、元祖、元祖的元祖、元祖的列表、多位数组 |
+| dtype | 数据类型，可选 |
+| order | 可选，有"C"和"F"两个选项，分别代表：行优先和列优先，在计算机内存中的储存元素的顺序 |
+
+- 实例1、将列表转换为 ndarray:
+    ```python
+    import numpy as np
+
+    x = [1, 2, 3]
+    a = np.asarray(x)
+    print(a)
+    ```
+    输出结果：
+    ```
+    [1 2 3]
+    ```
+
+- 实例2、将元祖转化为 ndarray:
+    ```python
+    import numpy as np
+
+    x = (1, 2, 3)
+    a = np.asarray(x)
+    print(a)
+    ```
+    输出结果:
+    ```
+    [1 2 3]
+    ```
+
+- 实例3、将元组列表转换为 ndarray:
+    ```python
+    import numpy as np
+
+    x = [(1, 2, 3), (4, 5)]
+    a = np.asarray(x)
+    print(a)
+    ```
+    输出结果:
+    ```
+    [(1, 2, 3) (4, 5)]
+    ```
+
+- 实例4、设置了 dtype 参数：
+    ```python
+    import numpy as np
+
+    x = [1, 2, 3]
+    a = np.asarray(x, dtype = float)
+    print(a)
+    ```
+    输出结果:
+    ```
+    [1. 2. 3.]
+    ```
+
+### 5.2、numpy.frombuffer
+
+numpy.frombuffer 用于实现动态数组
+
+numpy.frombuffer 接受 buffer 输入参数，以流的形式读入转化成 ndarray 对象
+```python
+numpy.frombuffer(buffer, dtype = float, count = -1, offset = 0)
+```
+- __注意:buffer 是字符串的时候，Python3 默认 str 是 Unicode 类型，所以要转成 bytestring 在原 str 前加上 b__
+
+参数说明:
+| 参数 | 描述 |
+| - | - |
+| buffer | 可以是任意对象，会以流的形式读入 |
+| dtype | 返回数组的数据类型，可选 |
+| count | 读取的数据数量，默认为-1，读取所有数据 |
+| offset | 读取的其实位置，默认为0 |
+
+- 实例
+    ```python
+    import numpy as np
+
+    s = b'Hello World'
+    a = np.frombuffer(s, dtype = 'S1')
+    print(a)
+    ```
+    输出结果:
+    ```
+    [b'H' b'e' b'l' b'l' b'o' b' ' b'W' b'o' b'r' b'l' b'd']
+    ```
+
+### 5.3、numpy.formiter
+
+numpy.fromiter 方法从可迭代对象中建立 ndarray 对象，返回一维数组
+```python
+numpy.fromiter(iterable, dtype, cuont = -1)
+```
+
+参数说明:
+
+| 参数 | 描述 |
+| - | - |
+| iterable | 可迭代对象 |
+| dtype | 返回数组的数据类型 |
+| count | 读取的数据数量，默认为-1，读取所有数据 |
+
+- 实例
+    ```python
+    import numpy as np
+
+    # 使用 range 函数创建列表对象
+    list = range(5)
+    it = iter(list)
+
+    # 使用迭代起创建 ndarray
+    x = np.fromiter(it, dtype = float)
+    print(x)
+    ```
+    输出结果:
+    ```
+    [0. 1. 2. 3. 4.]
+    ```
+
+Updating...
