--- a/_posts/2020-01-30-numpy.md
+++ b/_posts/2020-01-30-numpy.md
@@ -629,9 +629,9 @@ numpy.fromiter(iterable, dtype, cuont = -1)
     [0. 1. 2. 3. 4.]
     ```
 
-### 6、NumPy 从数值范围创建数组
+# 6、NumPy 从数值范围创建数组
 
-#### 6.1、numpy.arange
+### 6.1、numpy.arange
 
 numpy 包中的使用 arange 函数创建数值范围并返回 ndarray 对象，函数格式如下：
 ```python
@@ -685,7 +685,7 @@ numpy.arrange(start, stop, step, dtype)
     [10 12 14 16 18]
     ```
 
-#### 6.2、numpy.linspace
+### 6.2、numpy.linspace
 
 numpy.linspace 函数用于创建一个一维数组，数组是一个等差数列构成的，格式如下：
 ```python
@@ -763,7 +763,7 @@ np.linspace(start, stop, num=50, endpoint=True, retstep=False, dtype=None)
      [10.]]
     ```
 
-#### 6.3、numpy.logspace
+### 6.3、numpy.logspace
 
 numpy.logspace 函数用于创建一个于等比数列。格式如下：
 ```python
@@ -806,4 +806,4 @@ np.logspace(start, stop, num=50, endpoint=True, base=10.0, dtype=None)
     [  1.   2.   4.   8.  16.  32.  64. 128. 256. 512.]
     ```
 
-### UPDATING......
+## UPDATING......
