--- a/_posts/2020-01-30-numpy.md
+++ b/_posts/2020-01-30-numpy.md
@@ -806,4 +806,319 @@ np.logspace(start, stop, num=50, endpoint=True, base=10.0, dtype=None)
     [  1.   2.   4.   8.  16.  32.  64. 128. 256. 512.]
     ```
 
-## UPDATING......
+## 7、NumPy 切片和索引
+
+ndarray 对象的内容可以通过索引或切片来访问和修改，与 Python 中 list 的切片操作一样。
+
+ndarray 数组可以基于0 - n 的下表进行索引，切片对象可以通过内置 slice 函数。并设置 start、stop 及 step 参数进行。从原数组中切割出一个新数组。
+
+```python
+import numpy as np
+
+a = np.arange(10)
+s = slice(2, 7, 2) # 从索引 2 开始到索引 7 结束，间隔为 2
+print(a[s])
+```
+输出结果：
+```
+[2 4 6]
+```
+
+以上实例中，我们首先通过 arange() 函数创建 ndarray 对象。 然后，分别设置起始，终止和步长的参数为 2，7 和 2。
+
+我们也可以通过冒号分隔切片参数 start:stop:step 来进行切片操作：
+```python
+import numpy as np
+
+a = np.arange(10)
+b = a[2:7:2] # 从索引 2 开始到索引 7 结束，间隔为 2
+print(b)
+```
+输出结果：
+```
+[2 4 6]
+```
+
+冒号 `:` 的解释：如果只放置一个参数，如 `[2]`，将返回与该索引相对应的单个元素。如果为 `[2:]`，表示从该索引开始以后的所有项都将被提取。如果使用了两个参数，如 `[2:7]`，那么则提取两个索引(不包括停止索引)之间的项。
+
+- 实例1：
+    ```python
+    import numpy as np
+
+    a = np.arange(10) # [0 1 2 3 4 5 6 7 8 9]
+    b = a[5]
+    print(b)
+    ```
+    输出结果：
+    ```
+    5
+    ```
+
+- 实例2：
+    ```python
+    import numpy as np
+    
+    a = np.arange(10)
+    print(a[2:])
+    ```
+    输出结果：
+    ```
+    [2 3 4 5 6 7 8 9]
+    ```
+
+- 实例3：
+    ```python
+    import numpy as np
+    
+    a = np.arange(10)  # [0 1 2 3 4 5 6 7 8 9]
+    print(a[2:5])
+    ```
+    输出结果：
+    ```
+    [2 3 4]
+    ```
+
+多维数组同样适用上述索引提取方法：
+```python
+import numpy as np
+
+a = np.array([[1, 2, 3], [3, 4, 5], [4, 5, 6]])
+print(a)
+
+#  从某个索引处开始切割
+print('从数组索引 a[1:] 处开始切割')
+print(a[1:])
+```
+输出结果：
+```
+[[1 2 3]
+ [3 4 5]
+ [4 5 6]]
+从数组索引 a[1:] 处开始切割
+[[3 4 5]
+ [4 5 6]]
+ ```
+
+ 切片还可以包括省略号 `...`，来使选择的长度与数组的维度相同。如果在行位置使用省略号，他将返回包含行中元素的 ndarray。
+
+ ```python
+import numpy as np
+ 
+a = np.array([[1,2,3],[3,4,5],[4,5,6]])
+print (a[...,1])   # 第2列元素
+print (a[1,...])   # 第2行元素
+print (a[...,1:])  # 第2列及剩下的所有元素
+ ```
+ 输出结果：
+```
+[2 4 5]
+
+[3 4 5]
+
+[[2 3]
+ [4 5]
+ [5 6]]
+```
+
+## 8、NumPy 高级索引
+
+NumPy 比一般的 Pthon 序列提供更多的索引方式。除了之前的用整数和切片的索引外，数组可以有整数的数组索引，布尔碎银及花式索引。
+
+### 8.1、整数数组索引
+
+以下实例获取数组中的(0, 0), (1, 1), (2, 0)位置的元素：
+
+```python
+import numpy as np
+
+x = np.array([[1, 2], [3, 4], [5, 6]])
+y = x[[0, 1, 2], [0, 1, 0]]
+print(y)
+```
+输出结果：
+```
+[1 4 5]
+```
+
+以下实例获取了 4x3 数组的四个角的元素。行索引是 `[1, 0]` 和 `[3, 3]`，列索引是 `[0, 2]` 和 `[0, 2]`。
+```python
+import numpy as np
+
+x = np.array([[0, 1, 2], [3, 4, 5], [6, 7, 8], [9, 10, 11]])
+print(x)
+print('\n')
+
+# 获取四个角元素
+rows = np.array([[0, 0], [3, 3]])
+xols = np.array([[0, 2], [0, 2]])
+y = x[rows, xols]
+print(y)
+```
+输出结果：
+```
+[[ 0  1  2]
+ [ 3  4  5]
+ [ 6  7  8]
+ [ 9 10 11]]
+
+
+[[ 0  2]
+ [ 9 11]]
+ ```
+
+返回的结果是包含每个元素的 ndarray 对象。
+
+可以借助切片 `:` 或 `...` 与索引数组结合：
+
+```python
+import numpy as np
+
+a = np.array([[1, 2, 3], [4, 5, 6],[7, 8, 9]])
+b = a[1:3, 1:3]
+c = a[1:3, [1, 2]]
+d = a[..., 1:]
+
+print(b)
+print(c)
+print(d)
+```
+输出结果：
+```
+[[5 6]
+ [8 9]]
+
+[[5 6]
+ [8 9]]
+
+[[2 3]
+ [5 6]
+ [8 9]]
+```
+
+### 8.2、布尔索引
+
+我们可以通过一个布尔数组来索引目标数组。
+
+布尔索引通过布尔运算 (eg: 比较运算) 来获取缝合指定条件的元素的数组：
+
+**1. 获取大于 5 的元素**
+
+```python
+import numpy as np
+
+x = np.array([[0, 1, 2], [3, 4, 5], [6, 7, 8], [9, 10, 11]])
+print(x)
+print('\n')
+
+# 打印大于 5 的元素
+print(x[x > 5])
+```
+输出结果：
+```
+[[ 0  1  2]
+ [ 3  4  5]
+ [ 6  7  8]
+ [ 9 10 11]]
+
+
+[ 6  7  8  9 10 11]
+```
+
+**2. 使用 `～`(取补运算) 来过滤 NaN**
+
+```python
+import numpy as np
+
+a = np.array([np.nan, 1, 2, np.nan, 3, 4, 5])
+print(a[~np.isnan(a)])
+```
+输出结果：
+```
+[1. 2. 3. 4. 5.]
+```
+
+**3. 从数组中过滤掉非复数元素**
+
+```python
+import numpy as np
+
+a = np.array([1, 2+6j, 5, 3.5+5j])
+print(a[np.iscomplex(a)])
+```
+输出结果：
+```
+[2. +6.j 3.5+5.j]
+```
+
+###　8.3、花式索引
+
+花式索引指的是利用整数数组进行索引。
+
+花式索引根据索引数组的值作为目标数组的某个轴的下标来取值。对于使用一维整型数组作为索引，如果目标是一维数组，那么索引的结果就是对应位置的元素；如果目标是二维数组，那么就是对应下标的行。
+
+花式索引跟切片不一样，它总是将数据复制到新数组中。
+
+**1. 传入顺序索引数组**
+
+```python
+import numpy as np
+
+x = np.arange(32).reshape((8, 4))
+print(x[[4, 2, 1, 7]])
+```
+输出结果：
+```
+[[16 17 18 19]
+ [ 8  9 10 11]
+ [ 4  5  6  7]
+ [28 29 30 31]]
+```
+
+**2. 传入倒序索引数组**
+
+```python
+import numpy as np
+
+x = np.arange(32).reshape((8, 4))
+print(x[[-4, -2, -1, -7]])
+```
+输出结果：
+```
+[[16 17 18 19]
+ [24 25 26 27]
+ [28 29 30 31]
+ [ 4  5  6  7]]
+```
+
+**3. 传入多个索引数组 (使用np.ix_)**
+
+```python
+import numpy as np
+
+x = np.arange(32).reshape((8, 4))
+
+print(x[[1, 5, 7, 2]][ :, [0, 3, 1, 2]])
+
+print(x[np.ix_([1, 5, 7, 2], [0, 3, 1, 2])])
+# [1, 5, 7, 2] 选择行
+# [0, 3, 1, 2] 排列顺序
+```
+输出结果：
+```
+[[ 4  7  5  6]
+ [20 23 21 22]
+ [28 31 29 30]
+ [ 8 11  9 10]]
+ 
+[[ 4  7  5  6]
+ [20 23 21 22]
+ [28 31 29 30]
+ [ 8 11  9 10]]
+
+```
+
+np.ix_ 函数，能把两个一维数组 转换为 一个用于选取方形区域的索引器。
+
+实际意思就是，直接往np.ix_()里扔进两个一维数组[1,5,7,2]，[0,3,1,2]，就能先按我们要求选取行，再按顺序将列排序，跟上面得到的结果一样，而不用写“[ : , [0,3,1,2] ]”。
+
+原理：np.ix_函数就是输入两个数组，产生笛卡尔积的映射关系
