--- a/_posts/2020-01-30-numpy.md
+++ b/_posts/2020-01-30-numpy.md
@@ -1050,7 +1050,7 @@ print(a[np.iscomplex(a)])
 [2. +6.j 3.5+5.j]
 ```
 
-###　8.3、花式索引
+### 8.3、花式索引
 
 花式索引指的是利用整数数组进行索引。
 
@@ -1058,7 +1058,7 @@ print(a[np.iscomplex(a)])
 
 花式索引跟切片不一样，它总是将数据复制到新数组中。
 
-**1. 传入顺序索引数组**
+### 8.3.1. 传入顺序索引数组
 
 ```python
 import numpy as np
@@ -1074,7 +1074,7 @@ print(x[[4, 2, 1, 7]])
  [28 29 30 31]]
 ```
 
-**2. 传入倒序索引数组**
+### 8.3.2. 传入倒序索引数组
 
 ```python
 import numpy as np
@@ -1090,7 +1090,7 @@ print(x[[-4, -2, -1, -7]])
  [ 4  5  6  7]]
 ```
 
-**3. 传入多个索引数组 (使用np.ix_)**
+### 8.3.3. 传入多个索引数组 (使用np.ix_)
 
 ```python
 import numpy as np
