--- a/_posts/2020-01-30-numpy.md
+++ b/_posts/2020-01-30-numpy.md
@@ -1357,7 +1357,7 @@ a = np.arange(0, 60, 5).reshape(3, 4)
 print('原始数组')
 print(a)
 
-for x in np.nditer(a, op_flags=['readwrite'])
+for x in np.nditer(a, op_flags=['readwrite']):
     x[...]=2 * x
 print('修改后数组')
 print(a)
