--- a/_posts/2020-01-30-numpy.md
+++ b/_posts/2020-01-30-numpy.md
@@ -231,22 +231,22 @@ numpy.dtype(object, align, copy)
     [(b'abc', 21, 50.) (b'xyz', 18, 75.)]
     ```
 
-- __每个内建类型都有一个唯一定义它的字符代码，如下：__
+**每个内建类型都有一个唯一定义它的字符代码，如下：**
 
-    | 字符 | 对应类型 |
-    | - | - |
-    | b | 布尔型 |
-    | i | (有符号) 整型 |
-    | u | 无符号整型 integer |
-    | f | 浮点型 |
-    | c | 复数浮点型 |
-    | m | timedelta（时间间隔）|
-    | M | datetime（日期时间）|
-    | O | (Python) 对象 |
-    | S, a | (byte-)字符串 |
-    | U | Unicode |
-    | V | 原始数据 (void) |
----
+| 字符 | 对应类型 |
+| - | - |
+| b | 布尔型 |
+| i | (有符号) 整型 |
+| u | 无符号整型 integer |
+| f | 浮点型 |
+| c | 复数浮点型 |
+| m | timedelta（时间间隔）|
+| M | datetime（日期时间）|
+| O | (Python) 对象 |
+| S, a | (byte-)字符串 |
+| U | Unicode |
+| V | 原始数据 (void) |
+
 ## 3、NumPy 数组属性
 
 NumPy 数组的维数称为秩（rank），秩就是轴的数量，即数组的维度，一维数组的秩为 1，二维数组的秩为 2，以此类推。
@@ -431,6 +431,7 @@ numpy.zeros(shape, dtype = float, order = 'C')
 ```
 
 参数说明:
+
 | 参数 | 描述 |
 | - | - |
 | shape | 数组形状 |
@@ -508,6 +509,7 @@ numpy.asarray(a, dtype = None, order = None)
 ```
 
 参数说明：
+
 | 参数 | 描述 |
 | - | - |
 | a | 任意形式的输入参数，可以是：列表、列表的元祖、元祖、元祖的元祖、元祖的列表、多位数组 |
@@ -577,6 +579,7 @@ numpy.frombuffer(buffer, dtype = float, count = -1, offset = 0)
 - __注意:buffer 是字符串的时候，Python3 默认 str 是 Unicode 类型，所以要转成 bytestring 在原 str 前加上 b__
 
 参数说明:
+
 | 参数 | 描述 |
 | - | - |
 | buffer | 可以是任意对象，会以流的形式读入 |
@@ -771,7 +774,7 @@ numpy.logspace 函数用于创建一个于等比数列。格式如下：
 ```python
 np.logspace(start, stop, num=50, endpoint=True, base=10.0, dtype=None)
 ```
--  base 参数意思是取对数的时候 log 的下标
+base 参数意思是取对数的时候 log 的下标
 
 | 参数 | 描述 |
 | - | - |
