--- a/_posts/2020-01-30-numpy.md
+++ b/_posts/2020-01-30-numpy.md
@@ -1123,7 +1123,7 @@ print(x[np.ix_([1, 5, 7, 2], [0, 3, 1, 2])])
 
 np.ix_ 函数，能把两个一维数组 转换为 一个用于选取方形区域的索引器。
 
-实际意思就是，直接往np.ix_()里扔进两个一维数组[1,5,7,2]，[0,3,1,2]，就能先按我们要求选取行，再按顺序将列排序，跟上面得到的结果一样，而不用写“[ : , [0,3,1,2] ]”。
+实际意思就是，直接往np.ix_()里扔进两个一维数组 `[1,5,7,2]，[0,3,1,2]` ，就能先按我们要求选取行，再按顺序将列排序，跟上面得到的结果一样，而不用写 `[ : , [0,3,1,2] ]`。
 
 原理：np.ix_函数就是输入两个数组，产生笛卡尔积的映射关系.
 
