--- a/_posts/2020-01-30-numpy.md
+++ b/_posts/2020-01-30-numpy.md
@@ -1448,3 +1448,452 @@ for x, y in np.nditer([a, b]):
 修改后的数组
 0 : 1, 5 : 2, 10 : 3, 15 : 4, 20 : 1, 25 : 2, 30 : 3, 35 : 4, 40 : 1, 45 : 2, 50 : 3, 55 : 4,
 ```
+
+## 11、NumPy 数组操作
+
+Numpy 中包含了一些函数用于处理数组，大概分为一下几类：
+
+- 修改数组形状
+- 翻转数组
+- 修改数组维度
+- 连接数组
+- 分割数组
+- 数组元素的增添与删除
+
+###　11.1、修改数组形状
+
+| 函数 | 描述 |
+| - | - |
+| respace | 不改变数据的条件下修改形状 |
+| flat | 数组元素迭代器 |
+| flatten | 返回一份数组拷贝，对拷贝所做的修改不会影响原始数组 |
+| ravel | 返回展开数组 |
+
+####　11.1.1、numnpy.reshape
+
+numpy.reshape 函数可以在不改变数据条件下修改形状，格式如下: `numpy.reshape(arr, newshape, order='C')`。
+
+- arr: 要修改形状的数组
+- newshape: 整数或者整数数组。新的形状应当兼容原有形状
+- order: 'C' --按行，'F' --按列，'A' --原顺序，'K' --元素在内存中的出现顺序
+
+```python
+import numpy as np
+
+a = np.arange(8)
+print('# 原始数组')
+print(a)
+
+b = a.reshape(4, 2)
+print('修改后的数组')
+print(b)
+```
+
+输出结果：
+```
+原始数组
+[0 1 2 3 4 5 6 7]
+
+修改后的数组
+[[0 1]
+ [2 3]
+ [4 5]
+ [6 7]]
+```
+
+#### 11.1.2、numpy.ndarray.flat
+
+numpy.ndarray.flat 是一个数组元素迭代器，实例如下：
+
+```python
+import numpy as np
+
+a = np.arange(9).reshape(3, 3)
+print('原始数组')
+for row in a:
+    print(row)
+    
+# 对数组中每个元素都进行处理，可以使用flat属性，该属性是一个数组元素迭代器：
+print('迭代后的数组')
+for element in a.flat:
+    print(element)
+```
+
+输出结果：
+```
+原始数组
+[0 1 2]
+[3 4 5]
+[6 7 8]
+迭代后的数组
+0
+1
+2
+3
+4
+5
+6
+7
+8
+```
+
+#### 11.1.3、numpy.ndarray.flatten
+
+numpy.ndarray.flatten 返回一份数组拷贝，对拷贝所做的修改不会影响原始数组，格式如下：
+
+```python
+ndarray.flatten(order='C')
+```
+
+参数说明：
+- order: 'C' -- 按行，'F' -- 按列，'A' -- 原顺序，'K' -- 元素在内存中的出现顺序
+
+```python
+import numpy as np
+
+a = np.arange(8).reshape(2, 4)
+print('原始数组')
+print(a)
+
+# 默认按行
+print('展开的数组')
+print(a.flatten())
+
+print('以 F 风格顺素展开的数组')
+print(a.flatten(order='F'))
+```
+
+ 输出结果：
+ ```
+原始数组
+[[0 1 2 3]
+ [4 5 6 7]]
+展开的数组
+[0 1 2 3 4 5 6 7]
+以 F 风格顺素展开的数组
+[0 4 1 5 2 6 3 7]
+ ```
+
+#### 11.1.4、numpy.revel
+
+numpy.revel() 展平的数组元素。顺序通常是"C风格"，返回的数组视图，修改会影响原始数组
+
+该函数接受里两个参数：
+
+```python
+numpy.revel(a, oredr='C')
+```
+
+ 参数说明：
+
+ - order：'C' -- 按行，'F' -- 按列，'A' -- 原顺序，'K' -- 元素在内存中的出现顺序
+
+```python
+import numpy as np
+
+a = np.arange(8).reshape(2, 4)
+
+print('原始数组')
+print(a)
+
+print('调用 ravel 函数之后')
+print(a.ravel())
+
+print('以 F 风格顺序调用 ravel 函数之后')
+print(a.ravel(order='F'))
+```
+
+输出结果：
+```
+原始数组
+[[0 1 2 3]
+ [4 5 6 7]]
+调用 ravel 函数之后
+[0 1 2 3 4 5 6 7]
+以 F 风格顺序调用 ravel 函数之后
+[0 4 1 5 2 6 3 7]
+```
+
+### 11.2、翻转数组
+
+| 函数 | 描述 |
+| - | - |
+| transpose | 对换数组的维度 |
+| ndarray.T | 转置，和self.transpose() 相同 |
+| rollaxis | 向后滚动指定的轴 |
+| swapaxes | 对换数组的两个轴 |
+
+#### 11.2.1、numpy.transpose
+
+numpy.transpose 函数用于对换函数数组的维度，格式如下：
+
+```python
+numpy.transpose(arr, axes)
+```
+
+参数说明：
+
+- arr: 要操作的数组
+- axes: 整数列表，对应维度，通常所有维度都会对换
+
+```python
+import numpy as np
+
+a = np.arange(12).reshape(3, 4)
+
+print('原数组')
+print(a)
+
+print('对换数组')
+print(np.transpose(a))
+```
+
+输出结果：
+```
+原数组
+[[ 0  1  2  3]
+ [ 4  5  6  7]
+ [ 8  9 10 11]]
+对换数组
+[[ 0  4  8]
+ [ 1  5  9]
+ [ 2  6 10]
+ [ 3  7 11]]
+```
+
+#### 11.2.2、numpy.ndarray.T
+
+numpy.ndarray.T 类似 numpy.transpose：
+
+```python
+import numpy as np
+ 
+a = np.arange(12).reshape(3,4)
+ 
+print ('原数组')
+print (a)
+ 
+print ('转置数组')
+print (a.T)
+```
+
+输出结果：
+```
+原数组
+[[ 0  1  2  3]
+ [ 4  5  6  7]
+ [ 8  9 10 11]]
+转置数组
+[[ 0  4  8]
+ [ 1  5  9]
+ [ 2  6 10]
+ [ 3  7 11]]
+```
+
+#### numpy.rollaxis 与 numpy.swapaxes
+
+在理解这两个函数之前,首先要理解 numpy 数组的轴
+
+轴(axis)是数组中维的标志,用维来解释的话过于抽象了,我们可以通过一个实例来说明
+
+假设我有一张学生成绩表,成绩表是按座位排列,成绩表如下
+
+|  |  |  |  |   |
+| - | - | - | - | - |
+| 78 | 34 | 87 | 25 | 83 |
+| 25 | 67 | 97 | 22 |　13 |
+| 78 | 43 | 87 | 45　| 89 |
+
+那么这张表的横轴就是就是排,竖轴就是列,我们可以算哪一排或者哪一列的平均分或者最高分,就是指定轴做运算,我们给把张表当成一个二维数组并加上数组下标，变成下表:`[[78, 34, 87, 25, 83], [25, 67, 97, 22, 13], [78, 43, 87, 45, 89]]`
+
+|  |  |  |  |   |
+| - | - | - | - | - |
+| 78(00) | 34(01) | 87(02) | 25(03) | 83(04) |
+| 25(10) | 67(11) | 97(12) | 22(13) | 13(14) |
+| 78(20) | 43{21} | 87(22) | 45(23) | 89(24) |
+
+运行代码求最大值：
+
+```python
+import numpy as np
+
+a = np.array([[78, 34, 87, 25, 83], [25, 67, 97, 22, 13], [78, 43, 87, 45, 89]])
+print(a.max(axis=0))
+print(a.max(axis=1))
+```
+
+输出结果：
+```
+[78 67 97 45 89]
+[87 97 89]
+```
+
+从这里可以看到 axis=0 就是竖轴的数据,第一行打印出了每列的最大值,axis=1 就是横轴的
+
+下面我们再使用一个 2X2 的三维数组:`[[[0, 1], [2, 3]], [[4, 5], [6, 7]]]`
+
+|  |  |
+| - | - |
+| 0(000) | 1(001) |
+| 2(010) | 3(011) |
+| 4(100) | 5(101) |
+| 6(110) | 7(111) |
+
+运行代码：
+
+```python
+import numpy as np
+
+a = np.array([[[0, 1], [2, 3]], [[4, 5], [6, 7]]])
+print(a.max(axis=0))
+
+print(a.max(axis=1))
+print(a.max(axis=2))
+```
+
+输出结果：
+```
+[[4 5]
+ [6 7]]
+
+[[2 3]
+ [6 7]]
+
+[[1 3]
+ [5 7]]
+```
+
+这里的最大值就是把一个一维数组当成了一个元素
+
+当 axis 为0 和 1 时，和二维数组同理
+
+重点关注axis=2时,这时为了匹配数组第三个下标相同的为一组,一维数组中的内容发生了改变:
+
+|  |  |
+| - | - |
+| [0(000),2(010)] | [1(001),3(011)] |
+| [4(100),6(110)] | [5(101),7(111)] |
+
+可以看出多维数组的axis是与数组下标相关的
+
+#### 11.2.3、numpy.rollaxis
+
+numpy.rollaxis 函数向后滚动特定的轴到一个特定的位置，格式如下：
+
+```python
+numpy.rollaxis(arr, axis, start)
+```
+
+参数说明：
+
+- arr: 数组
+- axis: 要向后滚动的轴，其他轴的相对位置不会改变
+- start: 默认为0, 表示完整的滚动。会滚动到特定的位置
+
+```python
+import numpy as np
+
+# 创建三维的 ndarray
+a = np.arange(8).reshape(2, 2, 2)
+
+print('原数组')
+print(a)
+
+# 将轴 2 滚动到轴 0（宽度到深度）
+print('调用 rollaxis 函数')
+print(np.rollaxis(a, 2))
+
+# 将轴 0 滚动到轴 1：（宽度到高度）
+print('调用 rollaxis 函数')
+print(np.rollaxis(a, 2, 1))
+```
+
+输出结果：
+```
+原数组
+[[[0 1]
+  [2 3]]
+
+ [[4 5]
+  [6 7]]]
+调用 rollaxis 函数
+[[[0 2]
+  [4 6]]
+
+ [[1 3]
+  [5 7]]]
+调用 rollaxis 函数
+[[[0 2]
+  [1 3]]
+
+ [[4 6]
+  [5 7]]]
+```
+
+程序运行 `np.rollaxis(a, 2)` 时，将轴 2 滚动到了轴 0 前面，其他轴相对 2 轴位置不变(start 默认 0),数组下标排序由 `0, 1, 2` 变成了 `1, 2, 0`
+
+这时数组按下标顺序重组，例如第一个数组中 `[0,1]` 下标为 `[000,001]`，其中 0 的下标变动不影响值，1 位置的下标由 `001` 变成 `010`，第一位的下标滚动到最后一位下标的后面，值由 `1(001)` 变成 `2(010)`:
+
+|   |   |
+| - | - |
+| 0(000) -> 0(000) | 1(001) -> 2(010) |
+| 2(010) -> 4(100) | 3(011) -> 6(110) |
+| 4(100) -> 1(001) | 5(101) -> 3(011) |
+| 6(110) -> 5(101) | 7(111) -> 7(111) |
+
+可以得出轴的滚动就是下标的滚动，同理运行 `np.rollaxis(a, 2, 1)` 时将下标 `0, 1, 2`变为 `0, 2, 1`
+
+numpy.swapaxes(arr, axis1, axis2) 函数则是交换，将 axis1 和 axis2 进行互换
+
+#### 11.2.4、numpy.swapaxes
+
+numpy.swapaxes 函数用于交换数组的两个轴，格式如下：
+
+```python
+numpy.swapaxes(arr, axis1, axis2)
+```
+
+- arr: 输入的数组
+- axis1: 对应第一个轴的整数
+- axis2: 对应第二个轴的整数
+
+```python
+import numpy as np
+ 
+# 创建了三维的 ndarray
+a = np.arange(8).reshape(2, 2, 2)
+
+print ('原数组')
+print (a)
+
+# 现在交换轴 0（深度方向）到轴 2（宽度方向）
+print ('调用 swapaxes 函数后的数组')
+print (np.swapaxes(a, 2, 0))
+```
+
+输出结果：
+```
+原数组
+[[[0 1]
+  [2 3]]
+
+ [[4 5]
+  [6 7]]]
+调用 swapaxes 函数后的数组
+[[[0 4]
+  [2 6]]
+
+ [[1 5]
+  [3 7]]]
+```
+
+###　11.3、修改数组维度
+
+| 维度 | 描述 |
+| - | - |
+| broadcast | 产生模仿广播的对象 |
+| broadcast_to | 将数组广播到新形状 |
+| expand_dims | 扩展数组的形状 |
+| squeeze | 从数组的形状中删除一维条目 |
+
+Updating......
