--- a/_posts/2020-01-30-numpy.md
+++ b/_posts/2020-01-30-numpy.md
@@ -1460,7 +1460,7 @@ Numpy 中包含了一些函数用于处理数组，大概分为一下几类：
 - 分割数组
 - 数组元素的增添与删除
 
-###　11.1、修改数组形状
+### 11.1、修改数组形状
 
 | 函数 | 描述 |
 | - | - |
@@ -1471,7 +1471,11 @@ Numpy 中包含了一些函数用于处理数组，大概分为一下几类：
 
 ####　11.1.1、numnpy.reshape
 
-numpy.reshape 函数可以在不改变数据条件下修改形状，格式如下: `numpy.reshape(arr, newshape, order='C')`。
+numpy.reshape 函数可以在不改变数据条件下修改形状，格式如下:
+
+```python
+numpy.reshape(arr, newshape, order='C')
+```
 
 - arr: 要修改形状的数组
 - newshape: 整数或者整数数组。新的形状应当兼容原有形状
@@ -1698,15 +1702,13 @@ print (a.T)
 
 假设我有一张学生成绩表,成绩表是按座位排列,成绩表如下
 
-|  |  |  |  |   |
 | - | - | - | - | - |
 | 78 | 34 | 87 | 25 | 83 |
-| 25 | 67 | 97 | 22 |　13 |
-| 78 | 43 | 87 | 45　| 89 |
+| 25 | 67 | 97 | 22 | 13 |
+| 78 | 43 | 87 | 45 | 89 |
 
 那么这张表的横轴就是就是排,竖轴就是列,我们可以算哪一排或者哪一列的平均分或者最高分,就是指定轴做运算,我们给把张表当成一个二维数组并加上数组下标，变成下表:`[[78, 34, 87, 25, 83], [25, 67, 97, 22, 13], [78, 43, 87, 45, 89]]`
 
-|  |  |  |  |   |
 | - | - | - | - | - |
 | 78(00) | 34(01) | 87(02) | 25(03) | 83(04) |
 | 25(10) | 67(11) | 97(12) | 22(13) | 13(14) |
