--- a/_posts/2020-01-30-numpy.md
+++ b/_posts/2020-01-30-numpy.md
@@ -902,7 +902,7 @@ print(a[1:])
 从数组索引 a[1:] 处开始切割
 [[3 4 5]
  [4 5 6]]
- ```
+```
 
  切片还可以包括省略号 `...`，来使选择的长度与数组的维度相同。如果在行位置使用省略号，他将返回包含行中元素的 ndarray。
 
@@ -969,7 +969,7 @@ print(y)
 
 [[ 0  2]
  [ 9 11]]
- ```
+```
 
 返回的结果是包含每个元素的 ndarray 对象。
 
@@ -1895,4 +1895,852 @@ print (np.swapaxes(a, 2, 0))
 | expand_dims | 扩展数组的形状 |
 | squeeze | 从数组的形状中删除一维条目 |
 
-Updating......
+#### 11.3.1、numpy.broadcast
+
+numpy.broadcast 用于模仿广播对象，它返回一个对象，该对象封装了将一个数组广播到另一个数组的结果。
+
+该函数使用两个数组作为输入参数，如下实例：
+
+```python
+import numpy as np
+ 
+x = np.array([[1], [2], [3]])
+y = np.array([4, 5, 6])  
+ 
+# 对 y 广播 x
+b = np.broadcast(x,y)  
+# 它拥有 iterator 属性，基于自身组件的迭代器元组
+ 
+print ('对 y 广播 x')
+r,c = b.iters
+ 
+# Python3.x 为 next(context) ，Python2.x 为 context.next()
+print (next(r), next(c))
+print (next(r), next(c))
+# shape 属性返回广播对象的形状
+ 
+print ('广播对象的形状')
+print (b.shape)
+# 手动使用 broadcast 将 x 与 y 相加
+b = np.broadcast(x,y)
+c = np.empty(b.shape)
+ 
+print ('手动使用 broadcast 将 x 与 y 相加')
+print (c.shape)
+c.flat = [u + v for (u,v) in b]
+ 
+print ('调用 flat 函数')
+print (c)
+# 获得了和 NumPy 内建的广播支持相同的结果
+ 
+print ('x 与 y 的和')
+print (x + y)
+```
+
+输出结果：
+
+```
+对 y 广播 x
+1 4
+1 5
+
+广播对象的形状
+(3, 3)
+
+手动使用 broadcast 将 x 与 y 相加
+(3, 3)
+
+调用 flat 函数
+[[5. 6. 7.]
+ [6. 7. 8.]
+ [7. 8. 9.]]
+
+x 与 y 的和
+[[5 6 7]
+ [6 7 8]
+ [7 8 9]]
+```
+
+#### 11.3.2、numpy.broadcast_to
+
+numpy.broadcast_to 函数将数组广播到新形状。它在原始数组上返回只读视图。 它通常不连续。 如果新形状不符合 NumPy 的广播规则，该函数可能会抛出ValueError。
+
+```python
+numpy.broadcast_to(array, shape, subok)
+```
+
+实例：
+
+```python
+import numpy as np
+ 
+a = np.arange(4).reshape(1,4)
+ 
+print ('原数组')
+print (a)
+ 
+print ('调用 broadcast_to 函数之后')
+print (np.broadcast_to(a,(4,4)))
+```
+
+输出结果：
+
+```
+原数组
+[[0 1 2 3]]
+
+调用 broadcast_to 函数之后
+[[0 1 2 3]
+ [0 1 2 3]
+ [0 1 2 3]
+ [0 1 2 3]]
+```
+
+#### 11.3.3、numpy.expand_dims
+
+numpy.expand_dims 函数通过在指定位置插入新的轴来扩展数组形状，函数格式如下:
+
+```python
+ numpy.expand_dims(arr, axis)
+```
+
+参数说明：
+
+- arr: 输入数组
+
+- axis: 新轴插入的位置
+
+```python
+import numpy as np
+ 
+x = np.array(([1,2],[3,4]))
+ 
+print ('数组 x')
+print (x)
+y = np.expand_dims(x, axis = 0)
+ 
+print ('数组 y')
+print (y)
+ 
+print ('数组 x 和 y 的形状')
+print (x.shape, y.shape)
+
+# 在位置 1 插入轴
+y = np.expand_dims(x, axis = 1)
+ 
+print ('在位置 1 插入轴之后的数组 y')
+print (y)
+ 
+print ('x.ndim 和 y.ndim')
+print (x.ndim,y.ndim)
+ 
+print ('x.shape 和 y.shape')
+print (x.shape, y.shape)
+```
+
+输出结果：
+
+```
+数组 x
+[[1 2]
+ [3 4]]
+ 
+数组 y
+[[[1 2]
+  [3 4]]]
+  
+数组 x 和 y 的形状
+(2, 2) (1, 2, 2)
+
+在位置 1 插入轴之后的数组 y
+[[[1 2]]
+
+ [[3 4]]]
+ 
+x.ndim 和 y.ndim
+2 3
+
+x.shape 和 y.shape
+(2, 2) (2, 1, 2)
+```
+
+#### 11.3.4、numpy.squeeze
+
+numpy.squeeze 函数从给定数组的形状中删除一维的条目，函数格式如下：
+
+```python
+numpy.squeeze(arr, axis)
+```
+
+参数说明：
+
+- arr: 输入数组
+- axis: 整数或整数元组，用于选择形状中一维条目的子集
+
+```python
+import numpy as np
+ 
+x = np.arange(9).reshape(1,3,3)
+ 
+print ('数组 x')
+print (x)
+y = np.squeeze(x)
+ 
+print ('数组 y')
+print (y)
+ 
+print ('数组 x 和 y 的形状')
+print (x.shape, y.shape)
+```
+
+输出结果：
+
+```
+数组 x
+[[[0 1 2]
+  [3 4 5]
+  [6 7 8]]]
+  
+数组 y
+[[0 1 2]
+ [3 4 5]
+ [6 7 8]]
+ 
+数组 x 和 y 的形状
+(1, 3, 3) (3, 3)
+```
+
+### 11.4、连接数组
+
+| 函数        | 描述                           |
+| :---------- | :----------------------------- |
+| concatenate | 连接沿现有轴的数组序列         |
+| stack       | 沿着新的轴加入一系列数组       |
+| hstack      | 水平堆叠序列中的数组（列方向） |
+| vstack      | 竖直堆叠序列中的数组（行方向） |
+
+#### 11.4.1、numpy.concatenate
+
+numpy.concatenate 函数用于沿指定轴连接相同形状的两个或多个数组，格式如下：
+
+```python
+numpy.concatenate((a1, a2, ...), axis)
+```
+
+参数说明：
+
+- a1, a2, ...: 相同类型的数组
+- axis: 沿着它连接数组的轴，默认为 0
+
+```python
+import numpy as np
+ 
+a = np.array([[1,2],[3,4]])
+ 
+print ('第一个数组')
+print (a)
+b = np.array([[5,6],[7,8]])
+ 
+print ('第二个数组')
+print (b)
+# 两个数组的维度相同
+ 
+print ('沿轴 0 连接两个数组')
+print (np.concatenate((a,b)))
+ 
+print ('沿轴 1 连接两个数组')
+print (np.concatenate((a,b),axis = 1))
+```
+
+输出结果：
+
+```
+第一个数组
+[[1 2]
+ [3 4]]
+ 
+第二个数组
+[[5 6]
+ [7 8]]
+ 
+沿轴 0 连接两个数组
+[[1 2]
+ [3 4]
+ [5 6]
+ [7 8]]
+ 
+沿轴 1 连接两个数组
+[[1 2 5 6]
+ [3 4 7 8]]
+```
+
+#### 11.4.2、numpy.stack
+
+numpy.stack 函数用于沿新轴连接数组序列，格式如下：
+
+```python
+numpy.stack(arrays, axis)
+```
+
+参数说明：
+
+- arrays: 相同形状的数组序列
+- axis: 返回数组中的轴，输入数组沿着它来堆叠
+
+```python
+import numpy as np
+ 
+a = np.array([[1,2],[3,4]])
+ 
+print ('第一个数组')
+print (a)
+b = np.array([[5,6],[7,8]])
+ 
+print ('第二个数组')
+print (b)
+ 
+print ('沿轴 0 堆叠两个数组')
+print (np.stack((a,b),0))
+ 
+print ('沿轴 1 堆叠两个数组')
+print (np.stack((a,b),1))
+```
+
+输出结果：
+
+```
+第一个数组
+[[1 2]
+ [3 4]]
+ 
+第二个数组
+[[5 6]
+ [7 8]]
+ 
+沿轴 0 堆叠两个数组
+[[[1 2]
+  [3 4]]
+
+ [[5 6]
+  [7 8]]]
+  
+沿轴 1 堆叠两个数组
+[[[1 2]
+  [5 6]]
+
+ [[3 4]
+  [7 8]]]
+```
+
+#### 11.4.3、numpy.hstack
+
+numpy.hstack 是 numpy.stack 函数的变体，它通过水平堆叠来生成数组。
+
+```python
+import numpy as np
+
+a = np.array([[1,2],[3,4]])
+
+print ('第一个数组')
+print (a)
+b = np.array([[5,6],[7,8]])
+
+print ('第二个数组')
+print (b)
+
+print ('水平堆叠')
+c = np.hstack((a,b))
+print (c)
+```
+
+输出结果：
+
+```
+第一个数组
+[[1 2]
+ [3 4]]
+ 
+第二个数组
+[[5 6]
+ [7 8]]
+ 
+水平堆叠
+[[1 2 5 6]
+ [3 4 7 8]]
+```
+
+#### 11.4.4、numpy.vstack
+
+numpy.vstack 是 numpy.stack 函数的变体，它通过垂直堆叠来生成数组。
+
+```python
+import numpy as np
+ 
+a = np.array([[1,2],[3,4]])
+ 
+print ('第一个数组')
+print (a)
+b = np.array([[5,6],[7,8]])
+ 
+print ('第二个数组')
+print (b)
+ 
+print ('竖直堆叠')
+c = np.vstack((a,b))
+print (c)
+```
+
+输出结果：
+
+```
+第一个数组
+[[1 2]
+ [3 4]]
+ 
+第二个数组
+[[5 6]
+ [7 8]]
+ 
+竖直堆叠
+[[1 2]
+ [3 4]
+ [5 6]
+ [7 8]]
+```
+
+### 11.5、分割数组
+
+| 函数   | 数组及操作                             |
+| ------ | -------------------------------------- |
+| split  | 将一个数组分割为多个子数组             |
+| hsplit | 将一个数组水平分割为多个子数组（按列） |
+| vsplit | 将一个数组垂直分割为多个子数组（按行） |
+
+#### 11.5.1、numpy.split
+
+numpy.split 函数沿特定的轴将数组分割为子数组，格式如下：
+
+```python
+numpy.split(ary, indices_or_sections, axis)
+```
+
+参数说明：
+
+- ary：被分割的数组
+- indices_or_sections：果是一个整数，就用该数平均切分，如果是一个数组，为沿轴切分的位置（左开右闭）
+- axis：沿着哪个维度进行切向，默认为0，横向切分。为1时，纵向切分
+
+```python
+import numpy as np
+
+a = np.arange(9)
+
+print ('第一个数组')
+print (a)
+
+print ('将数组分为三个大小相等的子数组')
+b = np.split(a,3)
+print (b)
+
+print ('将数组在一维数组中表明的位置分割')
+b = np.split(a,[4,7])
+print (b)
+```
+
+输出结果：
+
+```
+第一个数组
+[0 1 2 3 4 5 6 7 8]
+
+将数组分为三个大小相等的子数组
+[array([0, 1, 2]), array([3, 4, 5]), array([6, 7, 8])]
+
+将数组在一维数组中表明的位置分割
+[array([0, 1, 2, 3]), array([4, 5, 6]), array([7, 8])]
+```
+
+#### 11.5.2、numpy.hsplit
+
+numpy.hsplit 函数用于水平分割数组，通过指定要返回的相同形状的数组数量来拆分原数组。
+
+```python
+import numpy as np
+
+harr = np.floor(10 * np.random.random((2, 6)))
+print ('原array')
+print(harr)
+
+print ('拆分后')
+print(np.hsplit(harr, 3))
+```
+
+输出结果：
+
+```
+原array
+[[2. 7. 3. 8. 0. 8.]
+ [2. 4. 7. 6. 0. 2.]]
+
+拆分后
+[array([[2., 7.],
+       [2., 4.]]), array([[3., 8.],
+       [7., 6.]]), array([[0., 8.],
+       [0., 2.]])]
+```
+
+#### 11.5.3、numpy.vsplit
+
+numpy.vsplit 沿着垂直轴分割，其分割方式与hsplit用法相同。
+
+```python
+import numpy as np
+ 
+a = np.arange(16).reshape(4,4)
+ 
+print ('第一个数组')
+print (a)
+ 
+print ('竖直分割')
+b = np.vsplit(a,2)
+print (b)
+```
+
+输出结果：
+
+```
+第一个数组
+[[ 0  1  2  3]
+ [ 4  5  6  7]
+ [ 8  9 10 11]
+ [12 13 14 15]]
+
+竖直分割
+[array([[0, 1, 2, 3],
+       [4, 5, 6, 7]]), array([[ 8,  9, 10, 11],
+       [12, 13, 14, 15]])]
+```
+
+### 11.6、数组元素的添加与删除
+
+| 函数   | 元素及描述                               |
+| ------ | ---------------------------------------- |
+| resize | 返回指定形状的新数组                     |
+| append | 将值添加到数组末尾                       |
+| insert | 沿指定轴将值插入到指定下标之前           |
+| delete | 删掉某个轴的子数组，并返回删除后的新数组 |
+| unique | 查找数组内的唯一元素                     |
+
+#### 11.6.1、numpy.resize
+
+numpy.resize 函数返回指定大小的新数组。
+
+如果新数组大小大于原始大小，则包含原始数组中的元素的副本。
+
+```python
+numpy.resize(arr, shape)
+```
+
+参数说明：
+
+- arr：要修改大小的数组
+- shape：返回数组的新形状
+
+```python
+import numpy as np
+
+a = np.array([[1,2,3],[4,5,6]])
+
+print ('第一个数组')
+print (a)
+
+print ('第一个数组的形状')
+print (a.shape)
+b = np.resize(a, (3,2))
+
+print ('第二个数组')
+print (b)
+
+print ('第二个数组的形状')
+print (b.shape)
+# 要注意 a 的第一行在 b 中重复出现，因为尺寸变大了
+
+print ('修改第二个数组的大小')
+b = np.resize(a,(3,3))
+print (b)
+```
+
+输出结果：
+
+```
+第一个数组
+[[1 2 3]
+ [4 5 6]]
+
+第一个数组的形状
+(2, 3)
+
+第二个数组
+[[1 2]
+ [3 4]
+ [5 6]]
+ 
+第二个数组的形状
+(3, 2)
+
+修改第二个数组的大小
+[[1 2 3]
+ [4 5 6]
+ [1 2 3]]
+```
+
+#### 11.6.2、numpy.append
+
+numpy.append 函数在数组的末尾添加值。 追加操作会分配整个数组，并把原来的数组复制到新数组中。 此外，输入数组的维度必须匹配否则将生成ValueError。
+
+append 函数返回的始终是一个一维数组。
+
+```python
+numpy.append(arr, values, axis=None)
+```
+
+参数说明：
+
+- arr：输入数组
+- values：要向 arr 添加的值，需要和 arr 形状相同（除了要添加的轴）
+- axis：默认为 None。当 axis 无定义时，是横向加成，返回总是为一维数组！当 axis 有定义的时候，分别为 0 和 1 的时候。当axis有定义的时候，分别为 0 和 1 的时候（列数要相同）。当 axis 为 1 时，数组是加在右边（行数要相同）
+
+```python
+import numpy as np
+ 
+a = np.array([[1,2,3],[4,5,6]])
+ 
+print ('第一个数组')
+print (a)
+ 
+print ('向数组添加元素')
+print (np.append(a, [7,8,9]))
+ 
+print ('沿轴 0 添加元素')
+print (np.append(a, [[7,8,9]],axis = 0))
+ 
+print ('沿轴 1 添加元素')
+print (np.append(a, [[5,5,5],[7,8,9]],axis = 1))
+```
+
+输出结果：
+
+```
+第一个数组
+[[1 2 3]
+ [4 5 6]]
+ 
+向数组添加元素
+[1 2 3 4 5 6 7 8 9]
+
+沿轴 0 添加元素
+[[1 2 3]
+ [4 5 6]
+ [7 8 9]]
+ 
+沿轴 1 添加元素
+[[1 2 3 5 5 5]
+ [4 5 6 7 8 9]]
+```
+
+#### 11.6.3、numpy.insert
+
+numpy.insert 函数在给定索引之前，沿给定轴在输入数组中插入值。
+
+如果值的类型转换为要插入，则它与输入数组不同。 插入没有原地的，函数会返回一个新数组。 此外，如果未提供轴，则输入数组会被展开
+
+```python
+numpy.insert(arr, obj, values, axis)
+```
+
+参数说明：
+
+- arr：输入数组
+- obj：在其之前插入值的索引
+- values：要插入的值
+- axis：沿着它插入的轴，如果未提供，则输入数组会被展开
+
+```python
+import numpy as np
+
+a = np.array([[1,2],[3,4],[5,6]])
+
+print ('第一个数组')
+print (a)
+
+print ('未传递 Axis 参数; 在插入之前输入数组会被展开')
+print (np.insert(a,3,[11,12]))
+print ('传递了 Axis 参数; 会广播值数组来配输入数组')
+
+print ('沿轴 0 广播')
+print (np.insert(a,1,[11],axis = 0))
+
+print ('沿轴 1 广播')
+print (np.insert(a,1,11,axis = 1))
+```
+
+输出结果：
+
+```
+第一个数组
+[[1 2]
+ [3 4]
+ [5 6]]
+ 
+未传递 Axis 参数; 在插入之前输入数组会被展开
+[ 1  2  3 11 12  4  5  6]
+
+传递了 Axis 参数; 会广播值数组来配输入数组
+沿轴 0 广播
+[[ 1  2]
+ [11 11]
+ [ 3  4]
+ [ 5  6]]
+ 
+沿轴 1 广播
+[[ 1 11  2]
+ [ 3 11  4]
+ [ 5 11  6]]
+```
+
+#### 11.6.4、numpy.delete
+
+numpy.delete 函数返回从输入数组中删除指定子数组的新数组。 与 insert() 函数的情况一样，如果未提供轴参数，则输入数组将展开。
+
+```python
+numpy.delete(arr, obj, axis)
+```
+
+参数说明：
+
+- arr：输入数组
+- obj：可以被切片，整数或者整数数组，表明要从输入数组删除的子数组
+- axis：沿着它删除给定子数组的轴，如果未提供，则输入数组会被展开
+
+```python
+import numpy as np
+
+a = np.arange(12).reshape(3,4)
+
+print ('第一个数组')
+print (a)
+
+print ('未传递 Axis 参数; 在插入之前输入数组会被展开')
+print (np.delete(a,5))
+
+print ('删除第二列：')
+print (np.delete(a,1,axis = 1))
+
+print ('包含从数组中删除的替代值的切片')
+a = np.array([1,2,3,4,5,6,7,8,9,10])
+print (np.delete(a, np.s_[::2]))
+```
+
+输出结果：
+
+```
+第一个数组
+[[ 0  1  2  3]
+ [ 4  5  6  7]
+ [ 8  9 10 11]]
+ 
+未传递 Axis 参数; 在插入之前输入数组会被展开
+[ 0  1  2  3  4  6  7  8  9 10 11]
+
+删除第二列：
+[[ 0  2  3]
+ [ 4  6  7]
+ [ 8 10 11]]
+ 
+包含从数组中删除的替代值的切片
+[ 2  4  6  8 10]
+```
+
+#### 11.6.5、numpy.unique
+
+numpy.unique 函数用于去除数组中的重复元素。
+
+```python
+numpy.unique(arr, return_index, return_inverse, return_counts)
+```
+
+参数说明：
+
+- arr：输入数组，如果不是一维数组则会展开
+- return_index：如果为 true，返回新列表元素在旧列表中的位置（下标），并以列表形式储
+- return_inverse：如果为 true，返回旧列表元素在新列表中的位置（下标），并以列表形式储
+- return_counts：如果为 true，返回去重数组中的元素在原数组中的出现次数
+
+```python
+import numpy as np
+
+a = np.array([5,2,6,2,7,5,6,8,2,9])
+
+print ('第一个数组')
+print (a)
+
+print ('第一个数组的去重值')
+u = np.unique(a)
+print (u)
+
+print ('去重数组的索引数组')
+u,indices = np.unique(a, return_index = True)
+print (indices)
+
+print ('我们可以看到每个和原数组下标对应的数值')
+print (a)
+
+print ('去重数组的下标')
+u,indices = np.unique(a,return_inverse = True)
+print (u)
+
+print ('下标为')
+print (indices)
+
+print ('使用下标重构原数组')
+print (u[indices])
+
+print ('返回去重元素的重复数量')
+u,indices = np.unique(a,return_counts = True)
+print (u)
+print (indices)
+```
+
+输出结果：
+
+```
+第一个数组
+[5 2 6 2 7 5 6 8 2 9]
+
+第一个数组的去重值
+[2 5 6 7 8 9]
+
+去重数组的索引数组
+[1 0 2 4 7 9]
+
+我们可以看到每个和原数组下标对应的数值
+[5 2 6 2 7 5 6 8 2 9]
+
+去重数组的下标
+[2 5 6 7 8 9]
+
+下标为
+[1 0 2 0 3 1 2 4 0 5]
+
+使用下标重构原数组
+[5 2 6 2 7 5 6 8 2 9]
+
+返回去重元素的重复数量
+[2 5 6 7 8 9]
+[3 2 2 1 1 1]
+```
+
+
+
+
+
