--- a/_posts/2020-01-30-numpy.md
+++ b/_posts/2020-01-30-numpy.md
@@ -2949,3 +2949,490 @@ print (np.binary_repr(10, width = 8))
 00001010
 ```
 
+## 13、NumPy 字符串函数
+
+以下函数用于对 dtype 为 numpy.string_ 或 numpy.unicode_ 的数组执行向量化字符串操作。他们基于 Python 内置库中的标准字符串函数。
+
+这些函数在字符数组类 (numpy.char) 中定义。
+
+| 函数         | 描述                                       |
+| ------------ | ------------------------------------------ |
+| add()        | 对两个数组的逐个字符串元素进行链接         |
+| multiply()   | 返回按元素多重连接后的字符串               |
+| center()     | 居中字符串                                 |
+| capitalize() | 将字符串第一个字母转换位大写               |
+| title()      | 将字符串的每一个单词的第一个字母转换位大写 |
+| lower()      | 数组元素转换为小写                         |
+| upper()      | 数组元素转换为大写                         |
+| split()      | 指定分隔符对字符串进行分割，并返回数组列表 |
+| splitlines() | 返回元素中的行列表，以换行符分割           |
+| strip()      | 移除开头或结尾处的特定字符                 |
+| join()       | 通过指定分隔符来连接数组中的元素           |
+| replace()    | 使用新字符串替换字符串中的所有子字符串     |
+| decode()     | 数组元素依次调用str.decode                 |
+| encode()     | 数组元素依次调用str.encode                 |
+
+### numpy.char.add()
+
+numpy.char.add() 函数依次对两个数组的元素进行字符串连接。
+
+```python
+import numpy as np
+
+print('连接两个字符串')
+print(np.char.add(['hello'], ['xyz']))
+
+print('连接显示')
+print(np.char.add(['hello', 'hi'], ['abc', 'xyz']))
+```
+
+输出结果：
+
+```
+连接两个字符串
+['helloxyz']
+
+连接显示
+['helloabc' 'hixyz']
+```
+
+### numpy.char.multiply()
+
+numpy.char.multiply() 函数执行多重连接。
+
+```python
+import numpy as np
+
+print(np.char.multiply('zhw ', 3))
+```
+
+输出结果：
+
+```
+zhw zhw zhw 
+```
+
+### numpy.char.center()
+
+numpy.char.center() 函数用于将字符串居中，并使用指定字符在左侧和右侧进行填充。
+
+```python
+import numpy as np
+
+# np.char.center(str, width, fillchar)
+# str: 字符串,
+# width: 长度,
+# fillchar: 填充字符
+print(np.char.center('zhw', 20, fillchar = '*'))
+```
+
+输出结果：
+
+```
+********zhw*********
+```
+
+### numpy.char.capitalize()
+
+numpy.char.capitalize() 函数将字符串的第一个字母转换为大写：
+
+```python
+import numpy as np
+
+print(np.char.capitalize('zhw'))
+```
+
+输出结果：
+
+```
+Zhw
+```
+
+### numpy.char.title()
+
+numpy.char.title() 函数将字符串的每个单词的第一个字母转换为大写：
+
+```python
+import numpy as np
+
+print(np.char.title('i am zhw'))
+```
+
+输出结果：
+
+```
+I Am Zhw
+```
+
+### numpy.char.lower()
+
+numpy.char.lower() 函数对数组的每个元素转换为小写。它对每个元素调用 str.lower。
+
+```python
+import numpy as np
+
+# 操作数组
+print(np.char.lower(['I', 'AM', 'ZHW']))
+
+# 操作字符串
+print(np.char.lower('I AM ZHW'))
+```
+
+输出结果：
+
+```
+['i' 'am' 'zhw']
+
+i am zhw
+```
+
+### numpy.char.upper()
+
+numpy.char.upper() 函数对数组的每个元素转换为大写。它对每个元素调用 str.upper。
+
+```python
+import numpy as np
+
+# 操作数组
+print(np.char.upper(['i', 'am', 'zhw']))
+
+# 操作字符串
+print(np.char.upper('i am zhw'))
+```
+
+输出结果：
+
+```
+['I' 'AM' 'ZHW']
+
+I AM ZHW
+```
+
+### numpy.char.split()
+
+numpy.char.split() 通过指定分隔符对字符串进行分割，并返回数组。默认情况下，分隔符为空格。
+
+```python
+import numpy as np
+
+# 分隔符默认为空格
+print(np.char.split('i am zhw'))
+
+# 分隔符为 .
+print(np.char.split('www.zhwing.github.io', sep = '.'))
+```
+
+输出结果：
+
+```
+['i', 'am', 'zhw']
+
+['www', 'zhwing', 'github', 'io']
+```
+
+### numpy.char.splitlines()
+
+numpy.char.splitlines() 函数以换行符作为分隔符来分割字符串，并返回数组。
+
+```python
+import numpy as np
+
+# 换行符 \n
+print(np.char.splitlines('i\nam\nzhw'))
+print(np.char.splitlines('i\ram\rzhw'))
+```
+
+输出结果：
+
+```
+['i', 'am', 'zhw']
+
+['i', 'am', 'zhw']
+```
+
+### numpy.char.strip()
+
+numpy.char.strip() 函数用于移除开头或结尾处的特定字符。
+
+```python
+import numpy as np
+
+# 移除字符串头尾的 a 字符
+print(np.char.strip('ai am zhwa', 'a'))
+
+# 移除数组元素头尾的 a 字符
+print(np.char.strip(['ai am zhwa'], 'a'))
+```
+
+输出结果：
+
+```
+i am zhw
+
+['i am zhw']
+```
+
+### numpy.char.join()
+
+numpy.char.join() 函数通过指定分隔符来连接数组中的元素或字符串。
+
+```python
+import numpy as np
+
+# 操作字符串
+print(np.char.join(':', 'zhw'))
+
+# 指定多个分隔符操作数组元素
+print(np.char.join([':', '~', '-'], ['zhwing', 'github', 'io']))
+```
+
+输出结果：
+
+```
+z:h:w
+
+['z:h:w:i:n:g' 'g~i~t~h~u~b' 'i-o']
+```
+
+### numpy.char.replace()
+
+numpy.char.replace() 函数使用新字符串替换字符串中的所有子字符串。
+
+```python
+import numpy as np
+
+print(np.char.replace('i am zhw', 'zhw', 'abc'))
+```
+
+输出结果：
+
+```
+i am abc
+```
+
+### numpy.char.encode()
+
+numpy.char.encode() 函数对数组中的每个元素调用 str.encode 函数。 默认编码是 utf-8，可以使用标准 Python 库中的编解码器。
+
+```python
+import numpy as np
+
+print(np.char.encode('github', 'cp500'))
+```
+
+输出结果：
+
+```
+b'\x87\x89\xa3\x88\xa4\x82'
+```
+
+### numpy.char.decode()
+
+numpy.char.decode() 函数对编码的元素进行 str.decode() 解码。
+
+```python
+import numpy as np
+
+a = np.char.encode('github', 'cp500')
+print(a)
+print(np.char.decode(a, 'cp500'))
+```
+
+输出结果：
+
+```
+b'\x87\x89\xa3\x88\xa4\x82'
+
+github
+```
+
+## 14、NumPy 数学函数
+
+NumPy 包含大量的各种数学运算的函数，包含三角函数，算数运算的函数。复数处理的函数。
+
+### 14.1、三角函数
+
+**NumPy 提供了标准的三角函数：sin()、cos()、tan()**
+
+```python
+import numpy as np
+
+a = np.array([0, 20, 40, 60, 90])
+print('不同角度的正弦值')
+# 通过乘 PI/180 转化为弧度
+print(np.sin(a*np.pi/180))
+
+print ('数组中角度的余弦值')
+print(np.cos(a*np.pi/180))
+
+print ('数组中角度的正切值')
+print(np.tan(a*np.pi/180))
+```
+
+输出结果：
+
+```
+不同角度的正弦值
+[0.         0.34202014 0.64278761 0.8660254  1.        ]
+
+数组中角度的余弦值
+[1.00000000e+00 9.39692621e-01 7.66044443e-01 5.00000000e-01
+ 6.12323400e-17]
+ 
+数组中角度的正切值
+[0.00000000e+00 3.63970234e-01 8.39099631e-01 1.73205081e+00
+ 1.63312394e+16]
+```
+
+**arcsin，arccos，和 arctan 函数返回给定角度的 sin，cos 和 tan 的反三角函数**
+
+这些函数的结果可以通过 **`numpy.degrees()`** 函数将弧度转换为角度
+
+```python
+import numpy as np
+
+a = np.array([0, 30, 45, 60, 90])
+
+print('反正弦')
+sin = np.sin(a*np.pi/180)
+print(sin)
+print('角度制单位')
+inv = np.arcsin(sin)
+print(inv)
+print('通过转化为角度制来检查结果')
+print(np.degrees(inv))
+
+print('反余弦')
+cos = np.cos(a*np.pi/180)
+print(cos)
+inv = np.arccos(cos)
+print(inv)
+print('角度制单位')
+print(np.degrees(inv))
+
+print('反正切')
+tan = np.tan(a*np.pi/180)
+print(tan)
+inv = np.arctan(tan)
+print(inv)
+print('角度制单位')
+print(np.degrees(inv))
+```
+
+输出结果：
+
+```
+反正弦
+[0.         0.5        0.70710678 0.8660254  1.        ]
+角度制单位
+[0.         0.52359878 0.78539816 1.04719755 1.57079633]
+通过转化为角度制来检查结果
+[ 0. 30. 45. 60. 90.]
+
+反余弦
+[1.00000000e+00 8.66025404e-01 7.07106781e-01 5.00000000e-01
+ 6.12323400e-17]
+[0.         0.52359878 0.78539816 1.04719755 1.57079633]
+角度制单位
+[ 0. 30. 45. 60. 90.]
+
+反正切
+[0.00000000e+00 5.77350269e-01 1.00000000e+00 1.73205081e+00
+ 1.63312394e+16]
+[0.         0.52359878 0.78539816 1.04719755 1.57079633]
+角度制单位
+[ 0. 30. 45. 60. 90.]
+```
+
+### 14.2、舍入函数
+
+numpy.around() 函数返回指定数字的四舍五入值。
+
+```python
+numpy.around(a, decimals)
+```
+
+参数说明：
+
+- a：数组
+- decimals：舍入的小数位数。 默认值为0。 如果为负，整数将四舍五入到小数点左侧的位置
+
+```python
+import numpy as np
+ 
+a = np.array([1.0,5.55,  123,  0.567,  25.532])  
+print('原数组')
+print(a)
+
+print('舍入后')
+print(np.around(a))
+print(np.around(a, decimals =  1))
+print(np.around(a, decimals =  -1))
+```
+
+输出结果：
+
+```
+原数组
+[  1.      5.55  123.      0.567  25.532]
+
+舍入后
+[  1.   6. 123.   1.  26.]
+[  1.    5.6 123.    0.6  25.5]
+[  0.  10. 120.   0.  30.]
+```
+
+### 14.3、numpy.floor()
+
+numpy.floor() 返回小于或者等于指定表达式的最大整数，即向下取整。
+
+```python
+import numpy as np
+
+a = np.array([-1.7, 1.5, -0.2, 0.6, 10])
+
+print('提供的数组')
+print(a)
+
+print('修改后的数组')
+print(np.floor(a))
+```
+
+输出结果：
+
+```
+提供的数组
+[-1.7  1.5 -0.2  0.6 10. ]
+
+修改后的数组
+[-2.  1. -1.  0. 10.]
+```
+
+### 14.4、numpy.ceil()
+
+numpy.ceil() 返回大于或者等于指定表达式的最小整数，即向上取整。
+
+```python
+import numpy as np
+
+a = np.array([-1.7, 1.5, -0.2, 0.6, 10])
+
+print('提供的数组')
+print(a)
+
+print('修改后的数组')
+print(np.ceil(a))
+```
+
+输出结果：
+
+```
+提供的数组
+[-1.7  1.5 -0.2  0.6 10. ]
+
+修改后的数组
+[-1.  2. -0.  1. 10.]
+```
+
+## 15、NumPy 算术函数
+
