--- a/_posts/2020-01-30-numpy.md
+++ b/_posts/2020-01-30-numpy.md
@@ -633,7 +633,7 @@ numpy.fromiter(iterable, dtype, cuont = -1)
     [0. 1. 2. 3. 4.]
     ```
 
-# 6、NumPy 从数值范围创建数组
+## 6、NumPy 从数值范围创建数组
 
 ### 6.1、numpy.arange
 
