--- a/_posts/2020-01-30-numpy.md
+++ b/_posts/2020-01-30-numpy.md
@@ -2844,9 +2844,7 @@ print (np.bitwise_or(13, 17))
 ### 12.3、invert
 
 invert() 函数对数组中的整数位进行按位取反，即 0 变成 1，1 变成 0。
-
-对于有符号整数，取该二进制数的补码，然后 +1，二进制数，最高位为0表示正数，最高位为 1 表示负数。
-
+ npm install -g cnpm --registry=https://registry.npm.taobao.org
 看看 1 的计算步骤：
 
 - 将**`~1`**转二进制 ＝ **`00000001`**
@@ -3846,7 +3844,7 @@ print(np.average(a, axis = 1, weights = wt, returned = True))
 (array([0.625, 2.625, 4.625]), array([8., 8., 8.]))
 ```
 
-## 标准差
+### 标准差
 
 标准差是一组数据平均值分散程度的一种度量。
 
