--- a/_posts/2020-03-03-数据结构.md
+++ b/_posts/2020-03-03-数据结构.md
@@ -176,8 +176,7 @@ double f (int n, double a[], double x) {
 
 ### 1.2.1、应用实例
 
-#### 最大子列和问题：
-
+**最大子列和问题：**
 $$
 给定 N 个着呢个书的序列 {A1, A2, ..., An}，求函数f(i, j)=max(0, \sum_{k=i}^jA_k)的最大值：
 $$
@@ -317,7 +316,7 @@ $$
   复杂度：T(N)=O(N)
   $$
 
- ### 2、线性结构
+### 2、线性结构
 
 #### 2.1.1、多项式表示
 
