--- a/_posts/2020-03-03-数据结构.md
+++ b/_posts/2020-03-03-数据结构.md
@@ -6,6 +6,8 @@ description: 数据结构
 keywords: 数据结构, Notes
 ---
 
+[中国大学MOOC(慕课) 数据结构(浙江大学)](https://www.icourse163.org/learn/ZJU-93001?tid=1450069451#/learn/announce)
+
 ### 1.1.1、关于空间使用
 
 写一个程序实现一个函数 PrintN，似地传入一个正整数为 N 的参数后，能顺序打印从 1 到 N 全部正整数。
@@ -89,7 +91,7 @@ $$
   }
   ```
 
-### 1.1.3、抽象数据类型(Abstract Data Type)
+### 1.1.3、抽象数据类型
 
 - 数据类型
   - 数据对象集
