update 数据结构.md 指针、结构体

--- a/_posts/2020-03-03-数据结构.md
+++ b/_posts/2020-03-03-数据结构.md
@@ -8,7 +8,329 @@ keywords: 数据结构, Notes
 
 [中国大学MOOC(慕课) 数据结构(浙江大学)](https://www.icourse163.org/learn/ZJU-93001?tid=1450069451#/learn/announce)
 
-### 1.1.1、关于空间使用
+### 0、指针、结构体相关内容
+
+**[C 语言的指针支持]**
+
+1. 函数的地址调用
+2. 动态分配内存
+3. 数组的地址引用
+
+```c
+# include<stdio.h>
+
+int main()
+{
+    int x, *p;
+    x = 55;
+    p = &x;
+    printf ("%d %u\n", x, *p); // 55 55
+    *p = 65;
+    printf ("%d %u\n", x, *p); // 65 65
+    return 0;
+}
+```
+
+- 指针必须指向对象后，才能引用;
+- & 和 * 为互补运算;
+
+**[五种算数运算]**
+
+```c
+p1 ++; // 含义指向 a 后的整型单元
+p1 --; // 指向 a 前的整型单元
+p1 + n; // 指向 a 后的 n 个整型单元
+p1 - n; // 指向 a 前的 n 个整型单元
+p2 - p1; // a 和 b 之间差的单元数
+p ± n; // p 的实际内容 ±n sizeof(*p);
+```
+
+**[指针与数组]**
+
+数组是同类型的变量的集合，各元素按下标的特定顺序占据一段连续的内存，各元素的地址也连续，指针对数组元素非常方便。
+
+通过指针引用数组元素可以分以下三个步骤：
+
+1. 说明指针和数组：`int *p, a[10]`
+2. 指针指向数组：`p = a; p = &a[0];`(指向数组的首地址)
+3. 过指针引用数组元素：当指针指向数组的首地址时，则下标为 i 的元素地址为`p + i` 或 `a + i`
+
+**[引用数组元素可以有三种方法]**
+
+1. 下标法：`a[i]`
+2. 指针法：`*(p+i)`
+3. 数组名法：`*(a+i)`
+
+「 注」数组名是常量地址，不能改变！~~a = p~~
+
+**[C语言的动态分配函数(stdlib.h) ]**
+
+- malloc(m): 开辟 m 字节长度的地址空间，并返回这段空间的首地址
+- sizeof(x): 计算变量 x 的长度
+- free(p): 释放指针 p 所指变量的存储空间，即彻底删除一个变量
+
+**[C++的动态存储分配]**
+
+1. new  类型名 T (初值列表)
+
+   - 功能：申请用于存放T类型对象的内存空间，并依初值列表赋以初值
+   - 结果值：
+     - 成功：T类型的指针，指向新分配的内存
+     - 失败：0 (NULL)
+
+   ```c++
+   int *p1 = new int;
+   int *p1 = new int(10);
+   
+   delete p1;
+   ```
+
+2. delete 指针 P
+
+   - 功能：释放指针P所指向的内存。P必须是new操作的返回值
+
+   ```c++
+   int *p1 = new int[10];
+   
+   delete []p1;
+   ```
+
+**[C++中的参数传递]**
+
+函数调用时传送给形参表的实参必须与形参在类型、个数、顺序上保持一致
+
+参数传递有两种方式
+
+1. 传值方式：参数为整型、实型、字符型等
+2. 传地址：参数为指针变量、引用类型、数组名
+
+**「传值方式」**把实参的值传送给函数局部工作区相应的副本中，函数使用这个副本执行必要的功能。函数修改的是副本的值，实参的值不变
+
+```c++
+# include<iostream>
+using namespace std;
+
+void swap (float m, float n)
+{
+    float temp;
+    temp = m;
+    m = n;
+    n = temp;
+}
+
+int main()
+{
+    float a, b;
+    cin >> a >> b; // 1 2
+    swap(a, b);
+    cout << a << ' ' << b << endl; // 1 2
+    return 0;
+}
+```
+
+**「传地址方式」**指针变量作参数：形参变化影响实参
+
+```c++
+# include<iostream>
+using namespace std;
+
+void swap (float *m, float *n)
+{
+    float temp;
+    temp = *m;
+    *m = *n;
+    *n = temp;
+}
+
+int main()
+{
+    float a, b;
+    float *p1, *p2;
+    cin >> a >> b; // 1 2
+    p1 = &a; p2 = &b;
+    swap(p1, p2);
+    cout << a << ' ' << b << endl; // 2 1
+    return 0;
+}
+```
+
+**「传地址方式」**引用类型作参数：
+
+```c++
+# include<iostream>
+using namespace std;
+
+int main()
+{
+    int i = 5;
+    int& j = i; // j 是一个引用类型，代表 i 的一个替代名
+    i = 7; // i值改变时，j 值也跟着改变
+    cout << "i = " << i << " j = " << j << endl; // i= 7 j = 7
+    return 0;
+}
+```
+
+```c++
+# include<iostream>
+using namespace std;
+
+void swap(float& m,float& n)
+{
+    float temp;
+    temp=m;
+    m=n;
+    n=temp;
+}
+
+int main()
+{
+    float a, b;
+    cin >> a >> b; // 1 2
+    swap(a, b);
+    cout << a << ' ' << b << endl; // 2 1
+}
+```
+
+**「引用类型作形参的三点说明」**
+
+1. 传递引用给函数与传递指针的效果是一样的，形参变化实参也发生变化
+2. 引用类型作形参，在内存中并没有产生实参的副本，它 直接对实参操作；而一般变量作参数，形参与实参就占用不同的存储单元，所以形参变量的值是实参变量的副本。因此，当参数传递的数据量较大时，用引用比用一般变量传递参数的时间和空间效率都好
+3. 指针参数虽然也能达到与使用引用的效果，但在被调函数中需要重复使用 `*` 指针变量名”的形式进行运算，这很容易产生错误且程序的阅读性较差；另一方面，在主调函数的调用点处，必须用变量的地址作为实参
+
+**[传地址方式]** 数组名作参数：传递的是数组的首地址，对形参数组所做的任何改变都将反映到实参数组中
+
+```c++
+# include<iostream>
+using namespace std;
+
+void sub(char a[]);
+
+int main()
+{
+    char a[10] = "hello";
+    sub(a);
+    cout << a << endl;
+    return 0;
+}
+
+void sub(char b[])
+{
+    b[] = "world";
+}
+```
+
+**「问」**用数组作函数的参数，求10个整数的最大数
+
+```c++
+# include<iostream>
+using namespace std;
+# define N 10
+
+int max(int a[]);
+
+int main()
+{
+    int a[10];
+    int m;
+    for (int i = 0; i < N; i++) {
+      cin >> a[i];
+    } // 1 2 3 4 5 6 7 8 9 10
+    m = max(a);
+    cout << "The max number is:" << m << endl; // The max number is:10
+}
+
+int max(int b[]) {
+  int n = b[0];
+  for(int i = 1; i < N; i++) {
+    if(n < b[i]) n = b[i];
+  }
+  return n;
+}
+```
+
+**「练习」**用数组作为函数的参数，将数组中 n 个整数按相反的顺序存放，要求输入和输出在主函数中完成
+
+```c++
+# include<iostream>
+using namespace std;
+# define N 10
+void sub(int b[]) {
+    int temp;
+    int flag = N - 1;
+    for (int i = 0; i < N/2; i++) {
+        temp = b[i];
+        b[i] = b[i+flag];
+        b[i+flag] = temp;
+        flag -= 2;
+    }
+    return;
+}
+int main()
+{
+    int a[10];
+   	for (int i = 0; i < N; i++) {
+        cin >> a[i];
+    }
+    sub(a);
+    for (int i = 0; i < N; i++) {
+      cout << a[i] << ' ';
+    }
+    cout << endl;
+    return 0;
+}
+```
+
+**[结构体]**
+
+在数据中，经常有一些既有联系，类型又不同的数据，它们又需要一起处理。C 语言允许用户按自己的需要将不同的基本类型构造成一种特殊类型，即结构。
+
+```c
+struct 结构体名 { // struct：结构标志
+    type 成员 1;
+    type 成员 2;
+    ...
+    type 成员 n; // 结构类型中所含的成员项及其类型
+};
+```
+
+结构的定义确定了两点：
+
+1. 定义结构类型，确定结构中的成员项的名称及类型。
+2. 指明该结构类型的变量在内存中的**组织形式**
+
+```c
+struct Book {
+    char no[15];
+    char name[50];
+    float price;
+};
+Book b[10];
+
+typedef struct {
+    char no[15];   
+    char name[50]; 
+    float price;   
+} Book; 
+Book b[10];
+```
+
+**[结构指针]**
+
+```c
+typedef struct LNode {
+    ElemType data; // 数据余
+    struct LNode *next; // 指针域
+} LNode, *LinkList;
+// *LinkList 为 Lnide 类型的指针
+
+// 方式一：(*p).成员项名
+// 方式二：p->成员项名
+// LNode *p <---> LinkList P
+```
+
+### 1、序言
+
+#### 1.1.1、关于空间使用
 
 写一个程序实现一个函数 PrintN，似地传入一个正整数为 N 的参数后，能顺序打印从 1 到 N 全部正整数。
 
@@ -37,7 +359,7 @@ keywords: 数据结构, Notes
   }
   ```
 
-### 1.1.2、关于算法效率
+#### 1.1.2、关于算法效率
 
 写程序计算给定多项式在给定点 x 处的值：
 $$
@@ -91,7 +413,7 @@ $$
   }
   ```
 
-### 1.1.3、抽象数据类型
+#### 1.1.3、抽象数据类型
 
 - 数据类型
   - 数据对象集
@@ -117,7 +439,7 @@ $$
     - Matrix Multiply(Matrix A, Matrix B): 如果 A 的列数等于 B 夫人行数，则返回矩阵 C = AB，否则返回错误标志;
     - ......
 
-### 1.2.1、算法(Algorithm)
+#### 1.2.1、算法(Algorithm)
 
 - 一个有限指令集
 - 接受一些输入（有些情况下不需要输入）
@@ -176,7 +498,7 @@ double f (int n, double a[], double x) {
 }
 ```
 
-### 1.2.1、应用实例
+#### 1.2.1、应用实例
 
 **最大子列和问题：**
 $$
@@ -416,11 +738,11 @@ $$
    void Insert (ElementType X, int i, List PtrL) {
        int j;
        if (PtrL->Last == MAXSIZ-1) { // 表空间已满，不能插入
-           print("表满");
+           printf("表满");
            return;
        }
        if (i < 1 || i > PtrL->List+2) { // 检查插入位置的合法性
-           print("位置不合法");
+           printf("位置不合法");
            return;
        }
        for (j = PtrL > Last; j >= i-1; j--) {
@@ -440,7 +762,7 @@ $$
    void Delete (int i, List PtrL) {
        int j;
        if (i < 1 || i > PtrL->Last+1) {
-           print("不存在第%d个元素", i);
+           printf("不存在第%d个元素", i);
            return;
        }
        for (j = i; j <= PtrL->Last; j++) { // 检查插入位置的合法性
@@ -612,7 +934,7 @@ struct SNode {
 ```c
 void Push (Stack PtrS, ElementType item) {
     if (PtrS->Top == MaxSize-1) {
-        print ("堆栈满");
+        printf("堆栈满");
         return;
     } else {
         PtrS->Data[++(PtrS->Top)] = item;
@@ -626,7 +948,7 @@ void Push (Stack PtrS, ElementType item) {
 ```c
 ElementType Pop (Stack PtrtS) {
     if (PtrS->Top == -1) {
-        print ("堆栈空");
+        printf("堆栈空");
         return ERROR; // ERROR shi Elementtype 的特殊值，标志错误
     } else {
         return (PtrS->Data[(PtrS->Top)--]);
@@ -653,7 +975,7 @@ S.Top2 = MaxSize;
 void Push (struct DStack *PtrS, ElementType item, int Tag) {
     // Tag 作为区分两个堆栈的标志，取值为 1 和 2
     if (PtrS->Top2 - PtrS->Top1 == 1) { // 堆栈满条件
-        print ("堆栈满");
+        printf("堆栈满");
         return;
     } 
     if (Tag == 1) {
@@ -669,13 +991,13 @@ ElementType Pop (struct DStack *PtrS, int Tag) {
     // Tag 作为区分两个堆栈的标志，取值为 1 和 2
     if (Tag == 1) {
         if (PtrS->Top1 == -1) {
-            print ("堆栈 1 空");
+            printf("堆栈 1 空");
             return;
         } else
             return Ptrs->Data[(PtrS->Top1)--];
     } else {
         if (PtrS->Top2 == MaxSize) {
-            print ("堆栈 2 空");
+            printf("堆栈 2 空");
             return;
         } else
             return Ptrs->Data[(PtrS->Top2)++];
@@ -727,7 +1049,7 @@ ElementTypre Pop(Stack S) {
     struct SNode *FistCell;
     ElementType TopElem;
     if (IsEmpty(S)) {
-        print("堆栈空");
+        printf("堆栈空");
         return NULL;
     } else {
         FirstCell =S->Next;
