Update Blog Pictures

--- a/_posts/2020-01-30-numpy.md
+++ b/_posts/2020-01-30-numpy.md
@@ -1172,7 +1172,7 @@ print(a + b)
 
 下图展示了数组 b 如何通过广播来与数组 a 兼容：
 
-![croadcast](/img/blog/numpy/broadcast.png)
+![croadcast](/images/numpy/broadcast.png)
 
 4x3 的二维数组与长为 3 的一维数组相加。等效于把数组 b 在二维上重复 4 次运算：
 
@@ -4254,7 +4254,7 @@ print(np.extract(condition, x))
 
 NumPy 中包含了一个矩阵库 numpy.matlib，该模块中的函数返回的是一个矩阵，而不是 ndarray 对象。
 
-一个 ![img](/img/blog/numpy/mxn.svg)的矩阵是一个由![img](/img/blog/numpy/m.svg)行（row）![img](/img/blog/numpy/n.svg)列（column）元素排列成的矩形阵列。
+一个 ![img](/images/numpy/mxn.svg)的矩阵是一个由![img](/images/numpy/m.svg)行（row）![img](/images/numpy/n.svg)列（column）元素排列成的矩形阵列。
 
 矩阵里的元素可以是数字、符号或数学式。以下是一个由 6 个数字元素构成的 2 行 3 列的矩阵:
 
@@ -4363,7 +4363,7 @@ numpy.matlib.identity() 函数返回给定大小的单位矩阵。
 
 单位矩阵是个方阵，从左上角到右下角的对角线（称为主对角线）上的元素均为 1，除此以外全都为 0。
 
-![image](/img/blog/numpy/identity.png)
+![image](/images/numpy/identity.png)
 
 ```python
 import numpy as np 
@@ -4674,7 +4674,7 @@ x + y + z = 6
 
 可以使用矩阵表示为：
 
-![Image](/img/blog/numpy/linalg.solve.jpg)
+![Image](/images/numpy/linalg.solve.jpg)
 
 如果矩阵成为A、X和B，方程变为：
 
@@ -4983,7 +4983,7 @@ plt.show()
 
 图形由 show() 函数显示
 
-![image](/img/blog/numpy/demo.png)
+![image](/images/numpy/demo.png)
 
 **作为线性图的替代，可以通过向 plot() 函数添加格式字符串来显示离散值。 可以使用以下格式化字符**
 
@@ -5046,7 +5046,7 @@ plt.show()
 
 执行输出结果如下图：
 
-![image](/img/blog/numpy/demo2.png)
+![image](/images/numpy/demo2.png)
 
 ### 21.2、绘制正弦波
 
@@ -5068,7 +5068,7 @@ plt.show()
 
 执行输出结果如下图：
 
-![image](/img/blog/numpy/sin.png)
+![image](/images/numpy/sin.png)
 
 ### 21.3、subplot()
 
@@ -5103,7 +5103,7 @@ plt.show()
 
 执行输出结果如下图：
 
-![image](/img/blog/numpy/sin+cos.png)
+![image](/images/numpy/sin+cos.png)
 
 ### 21.4、bar()
 
@@ -5129,7 +5129,7 @@ plt.show()
 
 执行输出结果如下图：
 
-![image](/img/blog/numpy/bar.png)
+![image](/images/numpy/bar.png)
 
 ### 21.5、numpy.histogram()
 
@@ -5171,7 +5171,7 @@ plt.show()
 
 执行输出结果如下图：
 
-![image](/img/blog/numpy/plt.png)
+![image](/images/numpy/plt.png)
 
 ### Matplotlib 更多参考内容：
 
